--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -361,10 +361,124 @@ print("the volume of fourByFiveByTwo is \(fourByFiveByTwo.volume)")
 
 ## 프로퍼티 관찰자 (Property Observers)
 
+프로퍼티 관찰자는 프로퍼티 값의 변화를 관찰하고 이에 응답합니다.
 
+프로퍼티 관찰자는 새로운 값이 프로퍼티의 현재 값과 같더라도 프로퍼티의 값이 설정될 때마다 호출됩니다.
 
+#
 
+다음 위치에 프로퍼티 관찰자를 추가할 수 있습니다.
 
+- 사용자가 정의하는 저장 프로퍼티
+
+- 상속받은 저장 프로퍼티
+
+- 상속받은 계산 프로퍼티
+
+상속된 프로퍼티의 경우 하위 클래스에서 해당 프로퍼티를 재정의하여 프로퍼티 관찰자를 추가합니다.
+
+정의한 계산 프로퍼티의 경우 관찰자를 생성하는 대신 프로퍼티의 setter 를 사용하여 값 변경을 관찰하고 응답합니다.
+
+프로퍼티 재정의에 대한 자세한 내용은 [재정의 (Overriding)]() 에 설명되어 있습니다.
+
+#
+
+프로퍼티에 대해 다음 관찰자 중 하나 또는 둘 다를 정의할 수 있는 옵션이 있습니다.
+
+- `willSet` 은 값이 저장되기 직전에 호출됩니다.
+
+- `didSet` 은 새로운 값이 저장된 후 즉시 호출됩니다.
+
+#
+
+`willSet` 관찰자를 구현하면 새로운 프로퍼티 값이 상수 파라미터로 전달됩니다.
+
+`willSet` 구현의 일부로 이 파라미터의 이름을 지정할 수 있습니다.
+
+구현 내부에서 파라미터 이름과 소괄호를 작성하지 않으면 기본 파라미터 이름인 `newValue` 로 파라미터를 사용할 수 있습니다.
+
+#
+
+마찬가지로 `didSet` 관찰자를 구현하는 경우 이전 프로퍼티 값을 포함하는 상수 파라미터가 전달됩니다.
+
+파라미터 이름을 지정하거나 기본 파라미터 이름인 `oldValue` 를 사용할 수 있습니다.
+
+`didSet` 관찰자 내부의 프로퍼티에 값을 할당하면 할당한 새 값이 방금 설정된 값을 대체합니다.
+
+> Note    
+> 슈퍼 클래스 프로퍼티의 `willSet` 과 `didSet` 관찰자는 슈퍼 클래스 초기화가 호출된 후 하위 클래스 초기화에서 프로퍼티가 설정될 때 호출됩니다.
+> 슈퍼 클래스 초기화가 호출되기 전에 클래스가 자체 프로퍼티를 설정하는 동안에는 호출되지 않습니다.
+>
+> 초기화 위임에 대한 자세한 내용은 [값 타입에 대한 초기화 구문 위임 (Initializer Delegation for Value Types)]() 과 [클래스 타입에 대한 초기화 구문 위임 (Initializer Delegation for Class Types)]() 을 참조하세요.
+
+#
+
+다음은 `willSet` 과 `didSet` 동작에 대한 예입니다.
+
+아래 예제는 사람이 걷는 동안 총 걸음 수를 측정하는 `StepCounter` 라는 새로운 클래스를 정의합니다.
+
+이 클래스는 만보계 또는 기타 걸음 측정기의 입력 데이터와 함께 사용되어 일상 생활에서 개인의 운동 루틴을 추적할 수 있습니다.
+
+~~~ swift
+class StepCounter {
+    var totalSteps: Int = 0 {
+        willSet(newTotalSteps) {
+            print("About to set totalSteps to \(newTotalSteps)")
+        }
+        didSet {
+            if totalSteps > oldValue  {
+                print("Added \(totalSteps - oldValue) steps")
+            }
+        }
+    }
+}
+let stepCounter = StepCounter()
+stepCounter.totalSteps = 200
+// About to set totalSteps to 200
+// Added 200 steps
+stepCounter.totalSteps = 360
+// About to set totalSteps to 360
+// Added 160 steps
+stepCounter.totalSteps = 896
+// About to set totalSteps to 896
+// Added 536 steps
+~~~
+
+`StepCounter` 클래스는 `Int` 타입의 `totalSteps` 프로퍼티를 선언합니다.
+
+이것은 `willSet` 과 `didSet` 관찰자를 가진 저장 프로퍼티 입니다.
+
+#
+
+`totalSteps` 의 `willSet` 과 `didSet` 관찰자는 새로운 값이 프로퍼티에 할당될 때마다 호출됩니다.
+
+새로운 값이 현재 값과 동일한 경우에도 항상 호출됩니다.
+
+#
+
+이 예제의 `willSet` 관찰자는 새로운 값을 위한 `newTotalSteps` 라는 사용자 정의 파라미터 이름을 사용합니다.
+
+이 예제에서는 간단하게 설정하려는 값을 출력합니다.
+
+#
+
+`didSet` 관찰자는 `totalSteps` 값이 업데이트된 후에 호출됩니다.
+
+`totalSteps` 의 새로운 값과 이전 값을 비교합니다.
+
+걸음 수가 증가했다면 걸음수가 얼마나 증가하였는지 출력합니다.
+
+`didSet` 관찰자는 이전 값에 대한 사용자 정의 파라미터 명을 제공하지 않고 대신 `oldValue` 라는 기본 이름을 사용합니다.
+
+> Note    
+> 관찰자를 가진 프로퍼티를 in-out 파라미터로 함수에 전달하면 `willSet` 과 `didSet` 관찰자는 항상 호출됩니다.
+> 이것은 in-out 파라미터에 대한 copy-in-copy-out 메모리 모델 때문입니다.
+> 값은 함수 끝에서 프로퍼티에 항상 다시 기록됩니다.
+> in-out 파라미터의 동작에 대한 자세한 내용은 [In-Out 파라미터 (In-Out Parameters)]() 를 참조하세요.
+
+<br>
+
+## 프로퍼티 래퍼 (Property Wrappers)
 
 
 
