--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -480,6 +480,149 @@ stepCounter.totalSteps = 896
 
 ## 프로퍼티 래퍼 (Property Wrappers)
 
+프로퍼티 래퍼는 프로퍼티 저장 방법을 관리하는 코드와 프로퍼티를 정의하는 코드 사이에 분리 계층을 추가합니다.
+
+예를 들어 쓰레드 안정성 검사를 제공하거나 기본 데이터를 데이터베이스에 저장하는 프로퍼티가 있는 경우 모든 프로퍼티에 해당 코드를 작성해야 합니다.
+
+프로퍼티 래퍼를 사용하는 경우 래퍼를 정의할 때 관리 코드를 한번 작성한 다음 해당 관리 코드를 여러 프로퍼티에 적용하여 재사용합니다.
+
+#
+
+프로퍼티 래퍼를 정의하기 위해 `wrappedValue` 프로퍼티를 정의한 구조체, 열거형 또는 클래스를 만듭니다.
+
+아래 코드에서 `TwelveOrLess` 구조체는 래핑하는 값에 항상 12와 같거나 더 작은 숫자가 포함되도록 보장합니다.
+
+더 큰 숫자를 저장하도록 요청하면 12가 저장됩니다.
+
+~~~ swift
+@propertyWrapper
+struct TwelveOrLess {
+    private var number = 0
+    var wrappedValue: Int {
+        get { return number }
+        set { number = min(newValue, 12) }
+    }
+}
+~~~
+
+setter 는 새로운 값이 12보다 작거나 같은지 확인하고 getter 는 저장된 값을 반환합니다.
+
+> Note    
+> 위의 예제에서 `number` 선언은 변수를 `private` 으로 표시하여 `number` 가 `TwelveOrLess` 구현에서만 사용 되도록 합니다.
+> 다른곳에서 작성된 코드는 `wrappedValue` 에 대한 getter 및 setter 를 사용하여 값에 접근하고 직접 `number` 를 사용할 수 없습니다.
+> `private` 에 대한 자세한 내용은 [접근 제어 (Access Control)]() 를 참조하세요.
+
+#
+
+프로퍼티 앞에 래퍼 이름을 속성으로 작성하여 프로퍼티에 래퍼를 적용합니다.
+
+다음은 `TwelveOrLess` 프로퍼티 래퍼를 사용하여 크기가 항상 12이하인지 확인하는 직사각형을 저장하는 구조체입니다.
+
+~~~ swift
+struct SmallRectangle {
+    @TwelveOrLess var height: Int
+    @TwelveOrLess var width: Int
+}
+
+
+var rectangle = SmallRectangle()
+print(rectangle.height)
+// Prints "0"
+
+
+rectangle.height = 10
+print(rectangle.height)
+// Prints "10"
+
+
+rectangle.height = 24
+print(rectangle.height)
+// Prints "12"
+~~~
+
+`height` 및 `width` 프로퍼티는 `TwelveOrLess` 정의에서 초기값을 가져오며 `TwelveOrLess.number` 는 0으로 설정됩니다.
+
+`rectangle.height` 에 숫자 10을 저장하는 것은 그 숫자가 작은 숫자이기 때문에 성공적으로 저장합니다.
+
+그러나 24는 프로퍼티 setter 에서 허용되는 것보다 크므로 24를 저장하려고 하면 허용되는 가장 큰 값인 12로 설정됩니다.
+
+#
+
+프로퍼티에 래퍼를 적용하면 컴파일러는 래퍼에 대한 저장소를 제공하는 코드와 래퍼를 통해 프로퍼티에 접근을 제공하는 코드를 합성합니다.
+
+(프로퍼티 래퍼는 래핑된 값을 저장하는 역할을 담당하므로 이에 대한 합성 코드는 없습니다.)
+
+특수 속성 구문을 활용하지 않고도 프로퍼티 래퍼의 기능을 사용하는 코드를 작성할 수 있습니다.
+
+예를 들어 다음은 속성으로 `@TwelveOrLess` 를 작성하는 대신 해당 속성을 `TwelveOrLess` 구조체에 명시적으로 래핑하는 이전 코드 리스트의 `SmallRectangle` 버전입니다.
+
+~~~ swift
+struct SmallRectangle {
+    private var _height = TwelveOrLess()
+    private var _width = TwelveOrLess()
+    var height: Int {
+        get { return _height.wrappedValue }
+        set { _height.wrappedValue = newValue }
+    }
+    var width: Int {
+        get { return _width.wrappedValue }
+        set { _width.wrappedValue = newValue }
+    }
+}
+~~~
+
+`_height` 와 `_width` 프로퍼티는 프로퍼티 래퍼의 인스턴스인 `TwelveOrLess` 를 저장합니다.
+
+`height` 와 `width` 에 대한 getter 와 setter 는 `wrappedValue` 프로퍼티에 접근합니다.
+
+<br>
+
+### 래핑된 프로퍼티의 초기값 설정 (Setting Initial Values for Wrapped Properties)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
