--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -579,6 +579,49 @@ struct SmallRectangle {
 
 ### 래핑된 프로퍼티의 초기값 설정 (Setting Initial Values for Wrapped Properties)
 
+위 예제의 코드는 `TwelveOrLess` 에 정의한 `number` 에 초기값을 제공하여 래핑된 프로퍼티의 초기값을 설정합니다.
+
+이 프로퍼티 래퍼를 사용하는 코드는 `TwelveOrLess` 로 래핑된 프로퍼티에 대해 다른 초기값을 지정할 수 없습니다.
+
+예를 들어 `SmallRectangle` 정의에 `height` 와 `width` 에 초기값을 지정할 수 없습니다.
+
+초기값 설정이나 기타 사용자 정의를 지원하려면 프로퍼티 래퍼에 초기화를 추가해야 합니다.
+
+다음은 래핑된 값과 최대값을 설정하는 초기화를 정의하는 `TwelveOrLess` 의 확장된 버전 `SmallNumber` 입니다.
+
+~~~ swift
+@propertyWrapper
+struct SmallNumber {
+    private var maximum: Int
+    private var number: Int
+
+
+    var wrappedValue: Int {
+        get { return number }
+        set { number = min(newValue, maximum) }
+    }
+
+
+    init() {
+        maximum = 12
+        number = 0
+    }
+    init(wrappedValue: Int) {
+        maximum = 12
+        number = min(wrappedValue, maximum)
+    }
+    init(wrappedValue: Int, maximum: Int) {
+        self.maximum = maximum
+        number = min(wrappedValue, maximum)
+    }
+}
+~~~
+
+`SmallNumber` 의 정의에는 아래 예제에서 래핑된 값과 최대값을 설정하는데 사용하는 3가지 이니셜라이저 `init()`, `init(wrappedValue:)`, `init(wrappedValue:maximum:)` 가 포함되어 있습니다.
+
+초기화 및 초기화 구문에 대한 자세한 내용은 [초기화 (Initialization)]() 를 참조하세요.
+
+#
 
 
 
