--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -623,7 +623,51 @@ struct SmallNumber {
 
 #
 
+래퍼를 프로퍼티에 적용하고 초기값을 지정하지 않으면 Swift 는 래퍼를 설정하기 위해 `init()` 을 사용합니다.
 
+~~~ swift
+struct ZeroRectangle {
+    @SmallNumber var height: Int
+    @SmallNumber var width: Int
+}
+
+
+var zeroRectangle = ZeroRectangle()
+print(zeroRectangle.height, zeroRectangle.width)
+// Prints "0 0"
+~~~
+
+`height` 와 `width` 를 래핑한 `SmallNumber` 의 인스턴스는 `SmallNumber()` 호출로 생성됩니다.
+
+해당 이니셜라이저 내부의 코드는 기본값인 0과 12를 사용하여 초기 래핑된 값과 초기 최대값을 설정합니다.
+
+프로퍼티 래퍼는 `SmallRectangle` 에 `TwelveOrLess` 를 사용한 이전 예제처럼 모든 초기값을 제공합니다.
+
+해당 예제와 달리 `SmallNumber` 는 프로퍼티 선언의 일부분으로 초기값 작성을 제공합니다.
+
+#
+
+프로퍼티에 초기값을 지정하면 Swift 는 `init(wrappedValue:)` 를 사용하여 래퍼를 설정합니다.
+
+~~~ swift
+struct UnitRectangle {
+    @SmallNumber var height: Int = 1
+    @SmallNumber var width: Int = 1
+}
+
+
+var unitRectangle = UnitRectangle()
+print(unitRectangle.height, unitRectangle.width)
+// Prints "1 1"
+~~~
+
+래핑한 프로퍼티에 `=1` 을 작성하면 `init(wrappedValue:)` 초기화에 대한 호출로 변환됩니다.
+
+`height` 와 `width` 를 래핑한 `SmallNumber` 의 인스턴스는 `SmallNumber(wrappedValue: 1)` 호출로 생성됩니다.
+
+이 초기화는 래핑된 값을 사용하고 기본 최대값으로 12를 사용합니다.
+
+#
 
 
 
