--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -669,7 +669,68 @@ print(unitRectangle.height, unitRectangle.width)
 
 #
 
+사용자 정의 속성 뒤에 소괄호안에 인수를 작성하면 Swift 는 래퍼를 설정하기 위해 해당 인수를 받는 초기화를 사용합니다.
 
+예를 들어 초기값과 최대값을 제공하면 Swift 는 `init(wrappedValue:maximum:)` 초기화를 사용합니다.
+
+~~~ swift
+struct NarrowRectangle {
+    @SmallNumber(wrappedValue: 2, maximum: 5) var height: Int
+    @SmallNumber(wrappedValue: 3, maximum: 4) var width: Int
+}
+
+
+var narrowRectangle = NarrowRectangle()
+print(narrowRectangle.height, narrowRectangle.width)
+// Prints "2 3"
+
+
+narrowRectangle.height = 100
+narrowRectangle.width = 100
+print(narrowRectangle.height, narrowRectangle.width)
+// Prints "5 4"
+~~~
+
+`height` 를 래핑한 `SmallNumber` 의 인스턴스는 `SmallNumber(wrappedValue: 2, maximum: 5)` 를 호출하여 생성되고 `width` 를 래핑한 인스턴스는 `SmallNumber(wrappedValue: 3, maximum: 4)` 를 호출하여 생성됩니다.
+
+#
+
+프로퍼티 래퍼에 인수를 포함하면 래퍼의 초기상태를 설정하거나 래퍼가 생성될 때 래퍼에 다른 옵션을 전달할 수 있습니다.
+
+이 구문은 프로퍼티 래퍼를 사용하는 가장 일반적인 방법입니다.
+
+속성에 필요한 인수를 제공할 수 있으며 해당 인수는 초기화 구문에 전달됩니다.
+
+#
+
+프로퍼티 래퍼 인수를 포함하면 할당을 사용하여 초기값을 지정할 수도 있습니다.
+
+Swift 는 할당을 `wrappedValue` 인수처럼 처리하고 포함된 인수를 받아들이는 초기화를 사용합니다.
+
+~~~ swift
+struct MixedRectangle {
+    @SmallNumber var height: Int = 1
+    @SmallNumber(maximum: 9) var width: Int = 2
+}
+
+
+var mixedRectangle = MixedRectangle()
+print(mixedRectangle.height)
+// Prints "1"
+
+
+mixedRectangle.height = 20
+print(mixedRectangle.height)
+// Prints "12"
+~~~
+
+`height` 를 래핑한 `SmallNumber` 의 인스턴스는 기본 최대값 12를 사용하는 `SmallNumber(wrappedValue: 1)` 을 호출하여 생성됩니다.
+
+`width` 를 래핑한 인스턴스는 `SmallNumber(wrappedValue: 2, maximum: 9)` 를 호출하여 생성됩니다.
+
+<br>
+
+### 프로퍼티 래퍼에서 값 투영 (Projecting a Value From a Property Wrapper)
 
 
 
