--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -732,7 +732,79 @@ print(mixedRectangle.height)
 
 ### 프로퍼티 래퍼에서 값 투영 (Projecting a Value From a Property Wrapper)
 
+래핑된 값 외에도 프로퍼티 래퍼는 투영된 값을 정의하여 추가 기능을 노출할 수 있습니다.
 
+예를 들어 데이터베이스에 대한 접근을 관리하는 프로퍼티 래퍼는 투영된 값에 대한 `flushDatabaseConnection()` 메서드를 노출할 수 있습니다.
+
+투영된 값의 이름은 앞에 달러 표시(`$`) 로 시작한다는 점을 제외하면 래핑된 값과 동일합니다.
+
+코드에서 `$` 로 시작하는 프로퍼티를 정의할 수 없기 때문에 투영된 값은 정의한 프로퍼티를 절대 방해하지 않습니다.
+
+#
+
+위의 `SmallNumber` 예제에서 프로퍼티에 너무 큰 숫자를 설정하려고 하면 프로퍼티 래퍼가 이전에 저장한 숫자로 변경합니다.
+
+아래의 코드는 새로운 값을 저장하기 전에 프로퍼티 래퍼가 프로퍼티의 새로운 값을 변경하는지 판단하기 위해 `SmallNumber` 구조체에 `projectedValue` 프로퍼티를 추가합니다.
+
+~~~ swift
+@propertyWrapper
+struct SmallNumber {
+    private var number: Int
+    private(set) var projectedValue: Bool
+
+
+    var wrappedValue: Int {
+        get { return number }
+        set {
+            if newValue > 12 {
+                number = 12
+                projectedValue = true
+            } else {
+                number = newValue
+                projectedValue = false
+            }
+        }
+    }
+
+
+    init() {
+        self.number = 0
+        self.projectedValue = false
+    }
+}
+struct SomeStructure {
+    @SmallNumber var someNumber: Int
+}
+var someStructure = SomeStructure()
+
+
+someStructure.someNumber = 4
+print(someStructure.$someNumber)
+// Prints "false"
+
+
+someStructure.someNumber = 55
+print(someStructure.$someNumber)
+// Prints "true"
+~~~
+
+`someStructure.$someNumber` 는 래퍼의 투영된 값에 접근합니다.
+
+4와 같은 작은 숫자를 저장한 후에 `someStructure.$someNumber` 의 값은 `false` 입니다.
+
+그러나 55와 같은 큰 숫자를 저장한 후에 투영된 값은 `true` 입니다.
+
+#
+
+프로퍼티 래퍼는 투영된 값을 어떤 타입의 값도 반환할 수 있습니다.
+
+이 예제에서 프로퍼티 래퍼는 숫자가 변경되었는지에 대한 정보만 노출합니다.
+
+그래서 투영된 값으로 부울 값을 노출합니다.
+
+더 많은 정보의 노출이 필요한 래퍼는 다른 타입의 인스턴스를 반환하거나 투영된 값으로 래퍼의 인스턴스를 노출하기 위해 `self` 를 반환할 수 있습니다.
+
+#
 
 
 
