--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -806,7 +806,48 @@ print(someStructure.$someNumber)
 
 #
 
+타입의 일부인 코드에서 투영된 값에 접근할 때 프로퍼티 getter 나 인스턴스 메서드 처럼 다른 프로퍼티에 접근하듯이 프로퍼티 이름전에 `self.` 을 생략할 수 있습니다.
 
+다음 예제의 코드는 `$height` 와 `$width` 로 `height` 와 `width` 래퍼의 투영된 값을 참조합니다.
+
+~~~ swift
+enum Size {
+    case small, large
+}
+
+
+struct SizedRectangle {
+    @SmallNumber var height: Int
+    @SmallNumber var width: Int
+
+
+    mutating func resize(to size: Size) -> Bool {
+        switch size {
+        case .small:
+            height = 10
+            width = 20
+        case .large:
+            height = 100
+            width = 100
+        }
+        return $height || $width
+    }
+}
+~~~
+
+프로퍼티 래퍼 구문은 getter 와 setter 가 있는 프로퍼티의 짧은 구문이기 때문에 `height` 와 `width` 접근은 다른 프로퍼티 접근과 동일한 동작입니다.
+
+예를 들어 `resize(to:)` 에 코드는 프로퍼티 래퍼를 사용하는 `height` 와 `width` 에 접근합니다.
+
+`resize(to: .large)` 를 호출하면 `.large` 스위치 케이스가 사각형의 높이와 너비를 100으로 설정합니다.
+
+래퍼는 해당 프로퍼티 값이 12보다 커지는 것을 방지하고 값이 변경되었다는 사실을 기록하기 위해 투영된 값을 `true` 로 설정합니다.
+
+`resize(to:)` 끝에서 반환 구문은 프로퍼티 래퍼가 `height` 또는 `width` 중 하나를 변경했는지 여부를 판단하기 위해 `$height` 와 `$width` 를 확인합니다.
+
+<br>
+
+## 전역 및 지역 변수 (Global and Local Variables)
 
 
 
