--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -849,6 +849,57 @@ struct SizedRectangle {
 
 ## 전역 및 지역 변수 (Global and Local Variables)
 
+위에서 설명한 프로퍼티를 계산하고 관찰하는 기능은 전역 변수와 지역 변수에도 사용할 수 있습니다.
+
+전역 변수는 함수, 메서드, 클로저 또는 타입 컨텍스트의 외부에 정의된 변수입니다.
+
+지역 변수는 함수, 메서드 또는 클로저 컨텍스트 내에 정의된 변수입니다.
+
+#
+
+이전 챕터에서 본 전역 변수와 지역 변수는 모두 저장 변수 였습니다.
+
+저장 프로퍼티처럼 저장 변수는 타입의 값을 위한 저장소를 제공하고 값을 설정하고 조회할 수 있도록 합니다.
+
+#
+
+그러나 전역 또는 지역 범위로 계산 변수를 정의하고 저장 변수에 대한 관찰자를 정의할 수도 있습니다.
+
+계산 변수는 값을 저장하는 대신 값을 계산하고 계산 프로퍼티와 동일한 방식으로 작성됩니다.
+
+> Note    
+> 전역 상수와 변수는 [지연 저장 프로퍼티 (Lazy Stored Properties)]() 와 비슷한 방식으로 항상 느리게 계산됩니다.
+> 지연 저장 프로퍼티와 다르게 전역 상수와 변수는 `lazy` 수정자로 표시할 필요가 없습니다.
+> 지역 상수와 변수는 절대 느리게 계산되지 않습니다.
+
+#
+
+프로퍼티 래퍼를 지역 저장 변수에 적용할 수 있지만 전역 변수나 계산 변수에는 적용할 수 없습니다.
+
+예를 들어 아래 코드에서 `myNumber` 는 프로퍼티 래퍼로 `SmallNumber` 를 사용합니다.
+
+~~~ swift
+func someFunction() {
+    @SmallNumber var myNumber: Int = 0
+
+
+    myNumber = 10
+    // now myNumber is 10
+
+
+    myNumber = 24
+    // now myNumber is 12
+}
+~~~
+
+프로퍼티에 `SmallNumber` 를 적용할 때와 마찬가지로 `myNumber` 값을 10으로 설정하는 것이 유효합니다.
+
+프로퍼티 래퍼는 12보다 큰 값을 허용하지 않기 때문에 `myNumber` 를 24대신 12로 설정합니다.
+
+<br>
+
+## 타입 프로퍼티 (Type Properties)
+
 
 
 
