--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -900,6 +900,39 @@ func someFunction() {
 
 ## 타입 프로퍼티 (Type Properties)
 
+인스턴스 프로퍼티는 특정 타입의 인스턴스에 속하는 프로퍼티 입니다.
+
+해당 타입의 새로운 인스턴스를 생성할 때마다 다른 인스턴스와는 별도로 고유한 프로퍼티 값을 설정합니다.
+
+#
+
+또한 해당 타입의 인스턴스가 아닌 타입 자체에 속하는 프로퍼티를 정의할 수도 있습니다.
+
+생성하는 해당 타입의 인스턴스 갯수에 관계없이 이러한 프로퍼티의 복사본은 하나만 있습니다.
+
+이러한 종류의 프로퍼티를 타입 프로퍼티 라고 합니다.
+
+#
+
+타입 프로퍼티는 C 에서 static 상수 처럼 모든 인스턴스에서 사용할 수 있는 상수 프로퍼티나 C 에서 static 변수 처럼 타입의 모든 인스턴스에 전역인 값을 저장하는 프로퍼티 변수와 같은 특정 타입의 모든 인스턴스에 보편적인 값을 정의하는데 유용합니다.
+
+#
+
+저장 타입 프로퍼티는 변수 또는 상수 일 수 있습니다.
+
+계산 타입 프로퍼티는 계산 인스턴스 프로퍼티와 같은 방식으로 항상 프로퍼티 변수로 선언됩니다.
+
+> Note    
+> 저장 인스턴스 프로퍼티와 다르게 저장 타입 프로퍼티에는 항상 기본값을 제공해야 합니다.
+> 이는 타입 자체에 초기화 시 저장 타입 프로퍼티에 값을 할당할 수 있는 초기화가 없기 때문입니다.
+>
+> 저장 타입 프로퍼티는 첫번째 접근시 지연 초기화됩니다.
+> 여러 쓰레드가 동시에 접근하는 경우에도 한번만 초기화되도록 보장되며 `lazy` 수정자로 표시할 필요가 없습니다.
+
+<br>
+
+### 타입 프로퍼티 구문 (Type Property Syntax)
+
 
 
 
