--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -933,6 +933,49 @@ func someFunction() {
 
 ### 타입 프로퍼티 구문 (Type Property Syntax)
 
+C 와 Objective-C 에서는 타입과 연관된 static 상수와 변수를 전역 static 변수로 정의합니다.
+
+그러나 Swift 에서 타입 프로퍼티는 타입 정의의 일부로 타입의 외부 중괄호 안에 작성되며 각 타입 프로퍼티는 지원되는 타입으로 명시적으로 범위가 지정됩니다.
+
+#
+
+`static` 키워드를 사용하여 타입 프로퍼티를 정의합니다.
+
+클래스 타입에 대한 계산 타입 프로퍼티의 경우 `class` 키워드를 대신 사용하여 하위 클래스에서 상위 클래스의 구현을 재정의 할 수 있습니다.
+
+아래의 예제는 저장 타입 프로퍼티와 계산 타입 프로퍼티 구문을 보여줍니다.
+
+~~~ swift
+struct SomeStructure {
+    static var storedTypeProperty = "Some value."
+    static var computedTypeProperty: Int {
+        return 1
+    }
+}
+enum SomeEnumeration {
+    static var storedTypeProperty = "Some value."
+    static var computedTypeProperty: Int {
+        return 6
+    }
+}
+class SomeClass {
+    static var storedTypeProperty = "Some value."
+    static var computedTypeProperty: Int {
+        return 27
+    }
+    class var overrideableComputedTypeProperty: Int {
+        return 107
+    }
+}
+~~~
+
+> Note    
+> 위 예제의 계산 타입 프로퍼티는 읽기 전용 계산 타입 프로퍼티를 위한 것이지만 계산 인스턴스 프로퍼티와 동일한 구문을 사용하여 읽기 쓰기 계산 타입 프로퍼티를 정의할 수도 있습니다.
+
+<br>
+
+### 타입 프로퍼티 조회와 설정 (Querying and Setting Type Properties)
+
 
 
 
