--- a/Swift Documentation/2.Language Guide/10.Properties.md
+++ b/Swift Documentation/2.Language Guide/10.Properties.md
@@ -976,57 +976,127 @@ class SomeClass {
 
 ### 타입 프로퍼티 조회와 설정 (Querying and Setting Type Properties)
 
+타입 프로퍼티는 인스턴스 프로퍼티와 마찬가지로 점 구문을 사용하여 조회되고 설정됩니다.
 
+그러나 타입 프로퍼티는 해당 타입의 인스턴스가 아닌 타입에 대해 조회되고 설정됩니다.
 
+~~~ swift
+print(SomeStructure.storedTypeProperty)
+// Prints "Some value."
+SomeStructure.storedTypeProperty = "Another value."
+print(SomeStructure.storedTypeProperty)
+// Prints "Another value."
+print(SomeEnumeration.computedTypeProperty)
+// Prints "6"
+print(SomeClass.computedTypeProperty)
+// Prints "27"
+~~~
 
+#
 
+다음 예제는 여러개의 오디오 채널에 대한 오디오 레벨 미터를 모델링 하는 구조체에 일부분으로 2개의 저장 타입 프로퍼티를 사용합니다.
 
+각 채널은 `0` 부터 `10` 까지의 정수 오디오 레벨을 가지고 있습니다.
 
+#
 
+아래 그림은 이러한 오디오 채널 중 2개를 결합하여 스테레오 오디오 레벨 미터를 모델링하는 방법을 보여줍니다.
 
+채널의 오디오 레벨이 `0` 이면 해당 채널의 표시등은 켜지지 않습니다.
 
+오디오 레벨이 `10` 이면 해당 채널의 모든 표시등이 켜집니다.
 
+이 그림에서 왼쪽 채널의 현재 레벨은 `9` 이고 오른쪽 채널의 현재 레벨은 `7` 입니다.
 
+<img width="350" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/d485b143-14cc-44f6-aa0b-df73961af578">
 
+위에서 설명한 오디오 채널은 `AudioChannel` 구조체의 인스턴스로 표시됩니다.
 
+~~~ swift
+struct AudioChannel {
+    static let thresholdLevel = 10
+    static var maxInputLevelForAllChannels = 0
+    var currentLevel: Int = 0 {
+        didSet {
+            if currentLevel > AudioChannel.thresholdLevel {
+                // cap the new audio level to the threshold level
+                currentLevel = AudioChannel.thresholdLevel
+            }
+            if currentLevel > AudioChannel.maxInputLevelForAllChannels {
+                // store this as the new overall maximum input level
+                AudioChannel.maxInputLevelForAllChannels = currentLevel
+            }
+        }
+    }
+}
+~~~
 
+`AudioChannel` 구조체는 기능 제공을 위해 2개의 저장 타입 프로퍼티를 정의합니다.
 
+첫번째 `thresholdLevel` 은 오디오 레벨이 가질 수 있는 최대값을 정의합니다.
 
+모든 `AudioChannel` 인스턴스를 위한 `10` 의 상수값입니다.
 
+오디오 신호가 `10` 보다 높은 값으로 들어오는 경우 아래에 설명된 기준값으로 제한됩니다.
 
+#
 
+두번째 타입 프로퍼티는 `maxInputLevelForAllChannels` 라는 저장 프로퍼티 변수 입니다.
 
+이것은 `AudioChannel` 의 모든 인스턴스로 부터 받은 최대 입력값을 추적합니다.
 
+초기값 `0` 부터 시작합니다.
 
+#
 
+`AudioChannel` 구조체는 채널의 현재 오디오 레벨을 `0` 에서 `10` 으로 표현하는 `currentLevel` 이라는 저장 인스턴스 프로퍼티도 정의합니다.
 
+#
 
+`currentLevel` 프로퍼티는 `currentLevel` 이 설정될 때마다 값을 확인하는 `didSet` 프로퍼티 관찰자가 있습니다.
 
+이 관찰자는 2가지를 체크합니다.
 
+- `currentLevel` 의 새로운 값이 `thresholdLevel` 에 허용된 값보다 크면 프로퍼티 관찰자는 `currentLevel` 을 `thresholdLevel` 로 설정합니다.
 
+- `currentLevel` 의 새로운 값이 `AudioChannel` 인스턴스에서 이전에 받은 값보다 크면 프로퍼티 관찰자는 새로운 `currentLevel` 값을 `maxInputLevelForAllChannels` 타입 프로퍼티에 저장합니다.
 
+> Note    
+> 2가지 확인사항 중 첫번째 항목에서 `didSet` 관찰자는 `currentLevel` 을 다른 값으로 설정합니다.
+> 그러나 이것이 관찰자를 다시 호출하진 않습니다.
 
+#
 
+`AudioChannel` 구조체를 사용하여 `leftChannel` 과 `rightChannel` 이라는 2개의 새로운 오디오 채널을 생성하여 스테레오 사운드 시스템의 오디오 레벨을 나타낼 수 있습니다.
 
+~~~ swift
+var leftChannel = AudioChannel()
+var rightChannel = AudioChannel()
+~~~
 
+#
 
+왼쪽 채널의 `currentLevel` 을 `7` 로 설정하면 `maxInputLevelForAllChannels` 타입 프로퍼티가 `7` 로 업데이트 된 것을 볼 수 있습니다.
 
+~~~ swift
+leftChannel.currentLevel = 7
+print(leftChannel.currentLevel)
+// Prints "7"
+print(AudioChannel.maxInputLevelForAllChannels)
+// Prints "7"
+~~~
 
+#
 
+오른쪽 채널의 `currentlevel` 을 `11` 로 설정하려고 하면 오른쪽 채널의 `currentLevel` 프로퍼티가 최대값인 `10` 으로 제한되고 `maxInputLevelForAllChannels` 타입 프로퍼티가 `10` 으로 업데이트 된 것을 볼 수 있습니다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+~~~ swift
+rightChannel.currentLevel = 11
+print(rightChannel.currentLevel)
+// Prints "10"
+print(AudioChannel.maxInputLevelForAllChannels)
+// Prints "10"
+~~~
 
 ***
 
