--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -1,5 +1,40 @@
 # Methods (메서드)
 
+인스턴스 또는 타입의 일부인 함수를 정의하고 호출합니다.
+
+메서드는 특정 타입과 연관된 함수입니다.
+
+클래스, 구조체 그리고 열거형은 모두 특정 타입의 인스턴스 동작을 위한 특정 작업 및 기능을 캡슐화하는 인스턴스 메서드를 정의할 수 있습니다.
+
+클래스, 구조체 그리고 열거형은 타입 자체와 연관된 타입 메서드를 정의할 수도 있습니다.
+
+타입 메서드는 Objective-C 의 클래스 메서드와 유사합니다.
+
+#
+
+Swift 에서 구조체와 열거형에 메서드를 정의할 수 있다는 사실은 C 와 Objective-C 와의 가장 큰 차이점입니다.
+
+Objective-C 에서 클래스는 메서드를 정의할 수 있는 유일한 타입입니다.
+
+Swift 에서는 클래스, 구조체 또는 열거형을 정의할지 여부를 선택할 수 있으며 생성한 타입에 대해 메서드를 정의할 수 있는 유연성도 있습니다.
+
+<br>
+
+## 인스턴스 메서드 (Instance Methods)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
