--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -22,6 +22,90 @@ Swift 에서는 클래스, 구조체 또는 열거형을 정의할지 여부를 
 
 ## 인스턴스 메서드 (Instance Methods)
 
+인스턴스 메서드는 특정 클래스, 구조체 또는 열거형의 인스턴스에 속하는 함수입니다.
+
+인스턴스 프로퍼티에 접근하고 수정하는 방법을 제공하거나 인스턴스의 목적과 관련된 기능을 제공합니다.
+
+인스턴스 메서드는 [함수 (Fuctions)]() 에 설명된 대로 함수 구문과 완벽하게 동일합니다.
+
+#
+
+인스턴스 메서드는 속하는 타입의 중괄호 내에 작성합니다.
+
+인스턴스 메서드는 해당 타입의 다른 모든 인스턴스 메서드와 프로퍼티에 암시적으로 접근할 수 있습니다.
+
+인스턴스 메서드는 해당 메서드가 속한 타입의 특정 인스턴스에서만 호출될 수 있습니다.
+
+기존 인스턴스 없이 단독으로 호출할 수 없습니다.
+
+#
+
+다음은 작업이 발생하는 횟수를 계산하는데 사용할 수 있는 간단한 `Counter` 클래스를 정의하는 예입니다.
+
+~~~ swift
+class Counter {
+    var count = 0
+    func increment() {
+        count += 1
+    }
+    func increment(by amount: Int) {
+        count += amount
+    }
+    func reset() {
+        count = 0
+    }
+}
+~~~
+
+`Counter` 클래스는 3개의 인스턴스 메서드를 정의합니다.
+
+- `increment()` 는 `1` 씩 카운터를 증가시킵니다.
+
+- `increment(by: Int)` 는 지정된 정수 만큼 카운터를 증가시킵니다.
+
+- `rest()` 는 카운터를 `0` 으로 재설정합니다.
+
+#
+
+`Counter` 클래스는 현재 카운터 값을 추적하는 `count` 프로퍼티 변수도 선언합니다.
+
+프로퍼티와 동일하게 점 구문을 사용하여 인스턴스 메서드를 호출합니다.
+
+~~~ swift
+let counter = Counter()
+// the initial counter value is 0
+counter.increment()
+// the counter's value is now 1
+counter.increment(by: 5)
+// the counter's value is now 6
+counter.reset()
+// the counter's value is now 0
+~~~
+
+함수 파라미터는 [함수 인수 라벨과 파라미터 이름 (Function Argument Labels and Parameter Names)]() 에 설명된 대로 함수의 본문 내에서 사용하는 이름과 함수를 호출할 때 사용하는 인수 레이블 둘다 가질 수 있습니다.
+
+메서드는 타입과 연관된 함수일 뿐이기 때문에 메서드 파라미터의 경우에도 마찬가지 입니다.
+
+<br>
+
+### self 프로퍼티 (The self Property)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
