--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -90,7 +90,57 @@ counter.reset()
 
 ### self 프로퍼티 (The self Property)
 
+타입의 모든 인스턴스는 인스턴스 자체와 정확히 동일한 `self` 라는 암시적 프로퍼티를 가지고 있습니다.
 
+`self` 프로퍼티를 사용하여 자체 인스턴스 메서드 내에서 현재 인스턴스를 참조합니다.
+
+#
+
+위 예제의 `increment()` 메서드는 아래와 아래와 같이 작성될 수 있습니다.
+
+~~~ swift
+func increment() {
+    self.count += 1
+}
+~~~
+
+실제로 코드에서 `self` 를 자주 작성할 필요가 없습니다.
+
+`self` 를 명시적으로 작성하지 않으면 Swift 는 메서드 내에서 이미 알려진 프로퍼티 또는 메서드 이름을 사용할 때마다 현재 인스턴스 프로퍼티 또는 메서드를 참조하고 있다고 가정합니다.
+
+이 가정은 `Counter` 에 대한 3가지 인스턴스 메서드 내에서 `self.count` 가 아닌 `count` 를 사용하여 입증됩니다.
+
+#
+
+이 규칙의 주요 예외사항은 인스턴스 메서드의 파라미터 이름이 해당 인스턴스의 프로퍼티 이름과 동일할 때 발생합니다.
+
+이러한 경우 파라미터 이름이 우선시 되고 프로퍼티를 참조하려면 보다 한정된 방식으로 참조해야 합니다.
+
+`self` 프로퍼티를 사용하여 파라미터 이름과 프로퍼티 이름을 구별합니다.
+
+#
+
+여기서 `self` 는 `x` 라는 메서드의 파라미터와 `x` 라는 인스턴스 프로퍼티를 명확하게 합니다.
+
+~~~ swift
+struct Point {
+    var x = 0.0, y = 0.0
+    func isToTheRightOf(x: Double) -> Bool {
+        return self.x > x
+    }
+}
+let somePoint = Point(x: 4.0, y: 5.0)
+if somePoint.isToTheRightOf(x: 1.0) {
+    print("This point is to the right of the line where x == 1.0")
+}
+// Prints "This point is to the right of the line where x == 1.0"
+~~~
+
+`self` 접두사가 없으면 Swift 는 `x` 의 2가지 사용 모두 `x` 라는 메서드 파라미터를 참조한다고 가정합니다.
+
+<br>
+
+### 인스턴스 메서드 내에서 값 타입 수정 (Modifying Value Types from Within Instance Methods)
 
 
 
