--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -142,8 +142,105 @@ if somePoint.isToTheRightOf(x: 1.0) {
 
 ### 인스턴스 메서드 내에서 값 타입 수정 (Modifying Value Types from Within Instance Methods)
 
+구조체와 열거형은 값 타입 입니다.
 
+기본적으로 값 타입의 프로퍼티는 인스턴스 메서드 내에서 수정될 수 없습니다.
 
+#
+
+그러나 특정 메서드 내에서 구조체 또는 열거형의 프로퍼티를 수정해야 하는 경우 해당 메서드에 대한 동작 변경을 선택할 수 있습니다.
+
+그러면 해당 메서드는 메서드 내에서 해당 프로퍼티를 변경할 수 있고 변경된 내용은 메서드가 종료될 때 기존 구조체에 다시 작성됩니다.
+
+메서드는 암시적 `self` 프로퍼티에 완전히 새로운 인스턴스를 할당할 수도 있으며 이 새로운 인스턴스는 메서드가 종료될 때 기존 인스턴스를 대체합니다.
+
+#
+
+해당 메서드는 `func` 키워드 전에 `mutating` 키워드를 배치하여 이 동작을 선택할 수 있습니다.
+
+~~~ swift
+struct Point {
+    var x = 0.0, y = 0.0
+    mutating func moveBy(x deltaX: Double, y deltaY: Double) {
+        x += deltaX
+        y += deltaY
+    }
+}
+var somePoint = Point(x: 1.0, y: 1.0)
+somePoint.moveBy(x: 2.0, y: 3.0)
+print("The point is now at (\(somePoint.x), \(somePoint.y))")
+// Prints "The point is now at (3.0, 4.0)"
+~~~
+
+위의 `Point` 구조체는 `Point` 인스턴스를 일정량만큼 이동시키는 변경가능한 `moveBy(x:y:)` 메서드를 정의합니다.
+
+새로운 위치를 반환하는 대신 이 메서드는 실제로 호출된 위치를 수정합니다.
+
+`mutating` 키워드는 해당 프로퍼티를 수정할 수 있도록 정의에 추가됩니다.
+
+#
+
+[상수 구조체 인스턴스의 저장 프로퍼티 (Stored Properties of Constant Structure Instance)]() 에 설명된 대로 해당 프로퍼티가 변수이더라도 변경할 수 없기 때문에 구조체 타입의 상수에 대해 변경 메서드를 호출할 수 없습니다.
+
+~~~ swift
+let fixedPoint = Point(x: 3.0, y: 3.0)
+fixedPoint.moveBy(x: 2.0, y: 3.0)
+// this will report an error
+~~~
+
+<br>
+
+### Mutating 메서드 내에서 self 에게 할당 (Assigning to self Within a Mutating Method)
+
+변경 메서드는 암시적 `self` 프로퍼티에 완전히 새로운 인스턴스를 할당할 수 있습니다.
+
+위에서 본 `Point` 예제는 대신 다음과 같은 방법으로 작성될 수 있습니다.
+
+~~~ swift
+struct Point {
+    var x = 0.0, y = 0.0
+    mutating func moveBy(x deltaX: Double, y deltaY: Double) {
+        self = Point(x: x + deltaX, y: y + deltaY)
+    }
+}
+~~~
+
+이 버전의 변경 가능한 `moveBy(x:y:)` 메서드는 `x` 와 `y` 값이 대상 위치로 설정된 새로운 구조체를 생성합니다.
+
+이 대체 버전의 메서드를 호출하는 최종 결과는 이전 버전의 호출 결과와 동일합니다.
+
+#
+
+열거형의 변경 메서드는 암시적 `self` 파라미터를 동일한 열거형의 다른 케이스로 설정할 수 있습니다.
+
+~~~ swift
+enum TriStateSwitch {
+    case off, low, high
+    mutating func next() {
+        switch self {
+        case .off:
+            self = .low
+        case .low:
+            self = .high
+        case .high:
+            self = .off
+        }
+    }
+}
+var ovenLight = TriStateSwitch.low
+ovenLight.next()
+// ovenLight is now equal to .high
+ovenLight.next()
+// ovenLight is now equal to .off
+~~~
+
+이 예제는 3개의 상태를 나타내는 스위치를 열거형으로 정의합니다.
+
+이 스위치는 `next()` 메서드가 호출될 때마다 3가지 전원 상태 (`off`, `low`, `high`) 를 순환합니다.
+
+<br>
+
+## 타입 메서드 (Type Methods)
 
 
 
