--- a/Swift Documentation/2.Language Guide/11.Methods.md
+++ b/Swift Documentation/2.Language Guide/11.Methods.md
@@ -242,30 +242,176 @@ ovenLight.next()
 
 ## 타입 메서드 (Type Methods)
 
+위에서 설명한 대로 인스턴스 메서드는 특정 타입의 인스턴스에서 호출하는 메서드 입니다.
+
+타입 자체에서 호출되는 메서드도 정의할 수 있습니다.
+
+이러한 종류의 메서드를 타입 메서드 라고 합니다.
+
+메서드의 `func` 키워드 앞에 `static` 키워드를 작성하여 타입 메서드를 나타냅니다.
+
+클래스는 대신 `class` 키워드를 사용하여 하위 클래스가 해당 메서드의 상위 클래스 구현을 재정의할 수 있습니다.
+
+> Note    
+> Objective-C 에서는 Objective-C 클래스에 대해서만 타입 레벨 메서드를 정의할 수 있습니다.
+> Swift 에서는 모든 클래스, 구조체 그리고 열거형에 대해서 타입 레벨 메서드를 정의할 수 있습니다.
+> 각 타입 메서드는 지원하는 타입으로 명시적으로 범위가 지정됩니다.
+
+#
+
+타입 메서드는 인스턴스 메서드처럼 점 구문으로 호출됩니다.
+
+그러나 해당 타입의 인스턴스가 아닌 타입으로 타입 메서드를 호출합니다.
+
+다음은 `SomeClass` 라는 클래스에서 타입 메서드를 호출하는 방법입니다.
+
+~~~ swift
+class SomeClass {
+    class func someTypeMethod() {
+        // type method implementation goes here
+    }
+}
+SomeClass.someTypeMethod()
+~~~
+
+타입 메서드의 본문 내에서 암시적 `self` 프로퍼티는 타입의 인스턴스가 아닌 타입 자체를 참조합니다.
+
+인스턴스 프로퍼티와 인스턴스 메서드 파라미터에서와 같이 `self` 를 사용하여 타입 프로퍼티와 타입 메서드 파라미터를 명확하게 구분할 수 있습니다.
+
+#
+
+일반적으로 타입 메서드 본문 내에서 사용하는 규정되지 않은 메서드 및 프로퍼티 이름은 다른 타입 레벨 메서드 및 프로퍼티를 참조합니다.
+
+타입 메서드는 타입 이름을 접두사로 붙일 필요 없이 다른 메서드의 이름으로 다른 타입 메서드를 호출할 수 있습니다.
+
+마찬가지로 구조체와 열거형에서 타입 메서드는 타입 이름 접두사 없이 타입 프로퍼티의 이름을 사용하여 타입 프로퍼티에 접근할 수 있습니다.
+
+#
+
+아래 예제는 게임의 다양한 레벨이나 스테이지를 통해 플레이어의 진행상황을 추적하는 `LevelTracker` 라는 구조체를 정의합니다.
+
+1인용 게임이지만 단일 디바이스에 여러명의 플레이어를 위한 정보를 저장할 수 있습니다.
+
+#
+
+게임을 처음 플레이하면 레벨 1을 제외한 모든 게임의 레벨이 잠겨있습니다.
+
+플레이어가 레벨을 완료할 때마다 해당 레벨이 기기의 모든 플레이어가 플레이할 수 있도록 레벨이 풀립니다.
+
+`LevelTracker` 구조체는 타입 프로퍼티와 메서드를 사용하여 잠금이 해제된 게임 레벨을 추적합니다.
+
+또한 각 플레이어의 현재 레벨도 추적합니다.
+
+~~~ swift
+struct LevelTracker {
+    static var highestUnlockedLevel = 1
+    var currentLevel = 1
 
 
+    static func unlock(_ level: Int) {
+        if level > highestUnlockedLevel { highestUnlockedLevel = level }
+    }
 
 
+    static func isUnlocked(_ level: Int) -> Bool {
+        return level <= highestUnlockedLevel
+    }
 
 
+    @discardableResult
+    mutating func advance(to level: Int) -> Bool {
+        if LevelTracker.isUnlocked(level) {
+            currentLevel = level
+            return true
+        } else {
+            return false
+        }
+    }
+}
+~~~
 
+`LevelTracker` 구조체는 모든 플레이어가 잠금 해제한 최고 레벨을 추적합니다.
 
+이 값은 `highestUnlockedLevel` 이라는 타입 프로퍼티에 저장됩니다.
 
+#
 
+`LevelTracker` 는 `highestUnlockedLevel` 프로퍼티를 사용하는 2가지 타입 메서드를 정의합니다.
 
+첫번째 타입 메서드는 `unlock(_:)` 이라고 하며 새로운 레벨이 잠금 해제될 때마다 `highestUnlockedLevel` 의 값을 업데이트 합니다.
 
+두번째 타입 메서드는 `isUnlocked(_:)` 이라고 하며 편의 타입 함수이고 특정 레벨이 이미 잠금 해제된 경우 `true` 를 반환합니다.
 
+(이러한 타입 메서드는 `LevelTracker.highestUnlockedLevel` 로 작성할 필요없이 `highestUnlockedLevel` 타입 프로퍼티에 접근할 수 있습니다.)
 
+#
 
+타입 프로퍼티와 타입 메서드 외에도 `LevelTracker` 는 게임을 통해 각 플레이어의 진행 상황을 추적합니다.
 
+플레이어가 현재 플레이 중인 레벨을 추적하기 위해 `currentLevel` 이라는 인스턴스 프로퍼티를 사용합니다.
 
+#
 
+`currentLevel` 프로퍼티 관리를 돕기 위해 `LevelTracker` 는 `advance(to:)` 라는 인스턴스 메서드를 정의합니다.
 
+`currentLevel` 을 업데이트 하기 전에 이 메서드는 요청된 새 레벨이 잠금 해제되었는지 확인합니다.
 
+`advance(to:)` 메서드는 `currentLevel` 을 실제로 설정할 수 있는지 여부를 나타내는 부울 값을 반환합니다.
 
+`advance(to:)` 메서드를 호출하는 코드가 반환 값을 무시하는 것이 실수는 아니기 때문에 이 함수에는 `@discardableResult` 속성이 표시됩니다.
 
+속성에 대한 자세한 내용은 [속성 (Attributes)]() 을 참조하세요.
 
+#
 
+`LevelTracker` 구조체는 아래 표시된 `Player` 클래스와 함께 사용되어 각 플레이어의 진행 상황을 추적하고 업데이트 합니다.
+
+~~~ swift
+class Player {
+    var tracker = LevelTracker()
+    let playerName: String
+    func complete(level: Int) {
+        LevelTracker.unlock(level + 1)
+        tracker.advance(to: level + 1)
+    }
+    init(name: String) {
+        playerName = name
+    }
+}
+~~~
+
+`Player` 클래스는 해당 플레이어의 진행 상황을 추적하기 위해 새로운 `LevelTracker` 의 인스턴스를 생성합니다.
+
+또한 플레이어가 특정 레벨을 완료할 때마다 호출되는 `complete(level:)` 이라는 메서드도 제공합니다.
+
+이 메서드는 모든 플레이어의 다음 레벨을 잠금 해제하고 플레이어의 진행 상황을 업데이트하여 다음 레벨로 이동합니다.
+
+(이전 라인에서 `LevelTracker.unlock(_:)` 을 호출하여 해당 레벨이 잠금 해제하기 때문에 `advance(to:)` 의 부울 반환 값은 무시됩니다.)
+
+#
+
+새로운 플레이어를 위한 `Player` 클래스의 인스턴스를 생성하고 플레이어가 레벨 1을 완료하면 어떤 일이 발생하는지 확인할 수 있습니다.
+
+~~~ swift
+var player = Player(name: "Argyrios")
+player.complete(level: 1)
+print("highest unlocked level is now \(LevelTracker.highestUnlockedLevel)")
+// Prints "highest unlocked level is now 2"
+~~~
+
+#
+
+게임의 어떤 플레이어도 아직 잠금 해제하지 않은 레벨로 이동하려는 두번째 플레이어를 생성하는 경우 플레이어의 현재 레벨을 설정하려는 시도가 실패합니다.
+
+~~~ swift
+player = Player(name: "Beto")
+if player.tracker.advance(to: 6) {
+    print("player is now on level 6")
+} else {
+    print("level 6 hasn't yet been unlocked")
+}
+// Prints "level 6 hasn't yet been unlocked"
+~~~
 
 ***
 
