--- a/Swift Documentation/2.Language Guide/12.Subscripts.md
+++ b/Swift Documentation/2.Language Guide/12.Subscripts.md
@@ -1,5 +1,58 @@
 # Subscripts (서브스크립트)
 
+컬렉션의 요소에 접근합니다.
+
+클래스, 구조체 그리고 열거형은 컬렉션, 리스트 또는 시퀀스의 멤버 요소에 접근하기 위한 단축키인 서브 스크립트를 정의할 수 있습니다.
+
+설정과 검색을 위한 별도의 메서드 없이 인덱스별로 값을 설정하고 검색하려면 서브 스크립트를 사용합니다.
+
+예를 들어 `Array` 인스턴스의 요소에 `someArray[index]` 로 접근하고 `Dictionary` 인스턴스의 요소에 `someDictionary[key]` 로 접근합니다.
+
+#
+
+단일 타입에 대해 여러 서브 스크립트를 정의할 수 있으며 사용할 적절한 서브 스크립트 오버로드는 서브 스크립트에 전달하는 인덱스 값의 타입에 따라 선택됩니다.
+
+서브 스크립트는 단일 차원으로 제한되지 않으며 사용자 정의 타입의 요구 사항에 맞게 여러 입력 파라미터를 사용하여 서브 스크립트를 정의할 수 있습니다.
+
+<br>
+
+## 서브 스크립트 구문 (Subscript Syntax)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
