--- a/Swift Documentation/2.Language Guide/12.Subscripts.md
+++ b/Swift Documentation/2.Language Guide/12.Subscripts.md
@@ -18,9 +18,76 @@
 
 ## 서브 스크립트 구문 (Subscript Syntax)
 
+서브 스크립트를 사용하면 인스턴스 이름 뒤 대괄호 안에 하나 이상의 값을 작성하여 타입의 인스턴스를 검색할 수 있습니다.
 
+해당 구문은 인스턴스 메서드 구문과 계산 프로퍼티 구문과 유사합니다.
 
+`subscript` 키워드로 서브 스크립트 정의를 작성하고 인스턴스 메서드와 같은 방법으로 하나 이상의 입력 파라미터와 반환 타입을 지정합니다.
 
+인스턴스 메서드와 달리 서브 스크립트는 읽기-쓰기 또는 읽기 전용이 될 수 있습니다.
+
+이러한 동작은 계산 프로퍼티와 동일한 방식으로 getter 및 setter 에 의해 동작합니다.
+
+~~~ swift
+subscript(index: Int) -> Int {
+    get {
+        // Return an appropriate subscript value here.
+    }
+    set(newValue) {
+        // Perform a suitable setting action here.
+    }
+}
+~~~
+
+`newValue` 의 타입은 서브 스크립트의 반환 값과 동일합니다.
+
+계산 프로퍼티와 마찬가지로 setter 의 `(newValue)` 파라미터를 지정하지 않도록 선택할 수 있습니다.
+
+파라미터를 직접 지정하지 않으면 `newValue` 라는 기본 파라미터가 setter 에 제공됩니다.
+
+#
+
+읽기 전용 계산 프로퍼티와 마찬가지로 `get` 키워드와 중괄호를 제거하여 읽기전용 서브 스크립트를 쉽게 선언할 수 있습니다.
+
+~~~ swift
+subscript(index: Int) -> Int {
+    // Return an appropriate subscript value here.
+}
+~~~
+
+#
+
+다음은 정수의 n 배 테이블을 나타내는 `TimesTable` 구조체를 정의하는 읽기 전용 서브 스크립트 구현의 예입니다.
+
+~~~ swift
+struct TimesTable {
+    let multiplier: Int
+    subscript(index: Int) -> Int {
+        return multiplier * index
+    }
+}
+let threeTimesTable = TimesTable(multiplier: 3)
+print("six times three is \(threeTimesTable[6])")
+// Prints "six times three is 18"
+~~~
+
+이 예제에서 `TimesTable` 의 새로운 인스턴스는 3배 테이블을 나타내기 위해 생성됩니다.
+
+인스턴스의 `multiplier` 파라미터에 사용할 값으로 구조체의 `initializer` 에 `3` 의 값을 전달하여 나타냅니다.
+
+#
+
+`threeTimesTable[6]` 에 대한 호출에 표시된 것처럼 해당 서브 스크립트를 호출하여 `threeTimesTable` 인스턴스를 조회할 수 있습니다.
+
+이것은 `3` 의 `6` 배인 `18` 의 값을 반환하는 3배 테이블에서 6번째 항목을 요청합니다.
+
+> Note    
+> n 배 테이블은 수학적 규칙을 기반으로 합니다.
+> `threeTimesTable[someIndex]` 를 새로운 값으로 설정하는 것은 적절하지 않으므로 `TimesTable` 의 서브 스크립트는 읽기 전용 서브 스크립트로 정의됩니다.
+
+<br>
+
+## 서브 스크립트 사용 (Subscript Usage)
 
 
 
