--- a/Swift Documentation/2.Language Guide/12.Subscripts.md
+++ b/Swift Documentation/2.Language Guide/12.Subscripts.md
@@ -87,8 +87,43 @@ print("six times three is \(threeTimesTable[6])")
 
 <br>
 
-## 서브 스크립트 사용 (Subscript Usage)
+## 서브 스크립트 사용법 (Subscript Usage)
 
+"서브 스크립트" 의 정확한 의미는 사용되는 컨텍스트에 따라 다릅니다.
+
+서브 스크립트는 일반적으로 컬렉션, 리스트 또는 시퀀스의 멤버 요소에 접근하기 위한 바로 가기로 사용됩니다.
+
+특정 클래스나 구조체의 기능에 가장 적합한 방식으로 서브 스크립트를 자유롭게 구현할 수 있습니다.
+
+#
+
+예를 들어 Swift 의 `Dictionary` 타입은 `Dictionary` 인스턴스에 저장된 값을 설정하고 검색하기 위해 서브 스크립트를 구현합니다.
+
+서브 스크립트 대괄호 안에 딕셔너리의 키 타입의 키를 제공하고 딕셔너리의 값 타입의 값을 서브 스크립트에 할당하여 딕셔너리에 값을 설정할 수 있습니다.
+
+~~~ swift
+var numberOfLegs = ["spider": 8, "ant": 6, "cat": 4]
+numberOfLegs["bird"] = 2
+~~~
+
+위의 예제는 `numberOfLegs` 라는 변수를 정의하고 3개의 키-값 쌍을 포함하는 딕셔너리를 초기화합니다.
+
+`numberOfLegs` 딕셔너리의 타입은 `[String: Int]` 로 유추됩니다.
+
+딕셔너리를 생성한 후 이 예제에서는 서브 스크립트 할당을 사용하여 딕셔너리에 `"bird"` 의 `String` 키와 `2` 의 `Int` 값을 추가합니다.
+
+#
+
+`Dictionary` 서브 스크립트에 대한 자세한 내용은 [딕셔너리 접근과 수정 (Accessing and Modifying a Dictionary)]() 을 참조하세요.
+
+> Note    
+> Swift 의 `Dictionary` 타입은 옵셔널 타입을 가지고 반환하는 서브 스크립트인 키-값 서브 스크립트를 구현합니다.
+> 위의 `numberOfLegs` 딕셔너리의 경우 키-값 서브 스크립트는 `Int?` 타입 또는 "옵셔널 Int" 의 값을 가져와 반환합니다.
+> `Dictionary` 타입은 서브 스크립트 타입을 사용하여 모든 키에 값이 없다는 사실을 모델링하고 해당 키에 `nil` 을 할당하여 키의 값을 삭제할 수 있는 방법을 제공합니다.
+
+<br>
+
+## 서브 스크립트 옵션 (Subscript Options)
 
 
 
