--- a/Swift Documentation/2.Language Guide/12.Subscripts.md
+++ b/Swift Documentation/2.Language Guide/12.Subscripts.md
@@ -125,36 +125,133 @@ numberOfLegs["bird"] = 2
 
 ## 서브 스크립트 옵션 (Subscript Options)
 
+서브 스크립트는 여러개의 입력 파라미터를 사용할 수 있으며 이러한 입력 파라미터는 모든 타입이 가능합니다.
 
+서브 스크립트는 모든 타입의 값을 반환할 수도 있습니다.
 
+#
 
+함수 처럼 서브 스크립트는 [가변 파라미터 (Variadic Parameters)]() 와 [파라미터 기본값 (Default Parameter Values)]() 에서 설명한 대로 다양한 갯수의 파라미터를 사용하고 해당 파라미터에 대한 기본값을 제공할 수 있습니다.
 
+그러나 함수와 다르게 서브 스크립트는 in-out 파라미터를 사용할 수 없습니다.
 
+#
 
+클래스 또는 구조체는 필요한 만큼 서브 스크립트를 제공할 수 있으며 사용할 적절한 서브 스크립트는 서브 스크립트가 사용되는 지점에서 대괄호 안에 포함된 값의 타입을 기반으로 추론됩니다.
 
+이러한 여러개의 서브 스크립트 정의를 서브 스크립트 오버로딩 이라고 합니다.
 
+#
 
+일반적으로 서브 스크립트는 하나의 파라미터를 가지지만 해당 타입에 적합하다면 여러 파라미터를 사용하여 서브 스크립트를 정의할 수도 있습니다.
 
+다음 예제는 `Double` 값의 2차 행렬을 나타내는 `Matrix` 구조체를 정의합니다.
 
+`Matrix` 구조체의 서브 스크립트는 2개의 정수 파라미터를 사용합니다.
 
+~~~ swift
+struct Matrix {
+    let rows: Int, columns: Int
+    var grid: [Double]
+    init(rows: Int, columns: Int) {
+        self.rows = rows
+        self.columns = columns
+        grid = Array(repeating: 0.0, count: rows * columns)
+    }
+    func indexIsValid(row: Int, column: Int) -> Bool {
+        return row >= 0 && row < rows && column >= 0 && column < columns
+    }
+    subscript(row: Int, column: Int) -> Double {
+        get {
+            assert(indexIsValid(row: row, column: column), "Index out of range")
+            return grid[(row * columns) + column]
+        }
+        set {
+            assert(indexIsValid(row: row, column: column), "Index out of range")
+            grid[(row * columns) + column] = newValue
+        }
+    }
+}
+~~~
 
+`Matrix` 는 `row` 와 `columns` 라는 2개의 파라미터를 가지고 `Double` 타입의 `rows + columns` 값을 저장할 수 있을 만큼 큰 배열을 생성하는 초기화를 제공합니다.
 
+행렬의 각 위치는 `0.0` 의 초기값이 지정됩니다.
 
+이를 위해 배열의 크기와 초기 셀 값 `0.0` 이 올바른 크기의 새로운 배열을 생성하고 초기화하는 배열 초기화에 전달됩니다.
 
+이러한 초기화는 [기본값 배열 생성 (Creating an Array with a Default Value)]() 에 자세히 설명되어 있습니다.
 
+#
 
+적절한 행과 열의 갯수를 초기화에 전달하여 새로운 `Matrix` 인스턴스를 생성할 수 있습니다.
 
+~~~ swift
+var matrix = Matrix(rows: 2, columns: 2)
+~~~
 
+위의 예제는 2행과 2열을 가지는 새로운 `Matrix` 인스턴스를 생성합니다.
 
+`Matrix` 인스턴스의 `grid` 배열은 왼쪽 상단에서 오른쪽 하단으로 읽는 것처럼 사실상 행렬의 평면화된 버전입니다.
 
+<img width="450" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/1475b2a0-c341-4afa-ac65-85187fa39338">
 
+행렬의 값은 콤마로 구분된 서브 스크립트에 행과 열 값을 전달하여 설정할 수 있습니다.
 
+~~~ swift
+matrix[0, 1] = 1.5
+matrix[1, 0] = 3.2
+~~~
 
+이 2개의 구문은 서브 스크립트의 setter 를 호출하여 행렬의 우측 상단 (`row` 가 `0` 이고 `column` 이 `1`) 에 `1.5` 값을 설정하고 좌측 하단 (`row` 가 `1` 이고 `column` 이 `0`) 에 `3.2` 값을 설정합니다.
 
+<img width="400" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/d14eddee-99b5-416f-aa2b-016626b7b332">
 
+`Matrix` 서브 스크립트의 getter 와 setter 에는 모두 서브 스크립트의 `row` 와 `column` 값이 유효한지 확인하는 어설션이 포함되어 있습니다.
 
+이러한 어설션을 지원하기 위해 `Matrix` 는 요청한 `row` 와 `column` 이 행렬의 범위 내에 있는지 확인하는 `indexIsValid(row:column:)` 라는 편리한 메서드가 포함되어 있습니다.
 
+~~~ swift
+func indexIsValid(row: Int, column: Int) -> Bool {
+    return row >= 0 && row < rows && column >= 0 && column < columns
+}
+~~~
 
+#
+
+행렬 범위를 넘어서 서브 스크립를 접근하려고 하면 어설션이 트리거됩니다.
+
+~~~ swift
+let someValue = matrix[2, 2]
+// This triggers an assert, because [2, 2] is outside of the matrix bounds.
+~~~
+
+<br>
+
+## 타입 서브 스크립트 (Type Subscripts)
+
+위에서 설명한대로 인스턴스 서브 스크립트는 특정 타입의 인스턴스에 대해 호출하는 서브 스크립트 입니다.
+
+타입 자체에서 호출되는 서브 스크립트를 정의할 수도 있습니다.
+
+이러한 종류의 서브 스크립트를 타입 서브 스크립트 라고 합니다.
+
+`subscript` 키워드 앞에 `static` 키워드를 작성하여 타입 서브 스크립트를 나타냅니다.
+
+클래스는 하위 클래스가 상위 클래스의 서브 스크립트 구현을 재정의 할 수 있게 대신 `class` 키워드를 사용할 수 있습니다.
+
+아래 예제는 타입 서브 스크립트를 정의하고 호출하는 방법을 보여줍니다.
+
+~~~ swift
+enum Planet: Int {
+    case mercury = 1, venus, earth, mars, jupiter, saturn, uranus, neptune
+    static subscript(n: Int) -> Planet {
+        return Planet(rawValue: n)!
+    }
+}
+let mars = Planet[4]
+print(mars)
+~~~
 
 ***
 
