--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -2,7 +2,27 @@
 
 기능을 추가 또는 재정의 하기 위한 하위 클래스 입니다.
 
+클래스는 다른 클래스로부터 메서드, 프로퍼티 그리고 기타 특성을 상속받을 수 있습니다.
 
+한 클래스가 다른 클래스로부터 상속받을 때 상속하는 클래스를 하위 클래스 라고 하고 상속받는 클래스를 상위 클래스 라고 합니다.
+
+상속은 Swift 에서 클래스를 다른 타입과 구별하는 기본적인 동작입니다.
+
+#
+
+Swift 의 클래스는 상위 클래스에 속하는 메서드, 프로퍼티 그리고 서브 스크립트를 호출하고 접근할 수 있으며 해당 메서드, 프로퍼티 그리고 서브 스크립트의 자체 재정의 버전을 제공하여 동작을 개선하거나 수정할 수 있습니다.
+
+Swift 는 재정의 정의에 일치하는 상위 클래스 정의가 있는지 확인하여 재정의가 올바른지 확인하는데 도움이 됩니다.
+
+#
+
+클래스는 프로퍼티 값이 변경될 때 알려주기 위해 상속된 프로퍼티에 프로퍼티 관찰자를 추가할 수도 있습니다.
+
+프로퍼티 관찰자는 기존에 프로퍼티가 저장 프로퍼티 또는 계산 프로퍼티로 정의되었는지에 관계없이 모든 프로퍼티에 추가할 수 있습니다.
+
+<br>
+
+## 기본 클래스 정의 (Defining a Base Class)
 
 
 
