--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -24,11 +24,62 @@ Swift 는 재정의 정의에 일치하는 상위 클래스 정의가 있는지 
 
 ## 기본 클래스 정의 (Defining a Base Class)
 
+다른 클래스에서 상속되지 않는 모든 클래스를 기본 클래스 라고 합니다.
 
+> Note    
+> Swift 클래스는 범용 기본 클래스를 상속하지 않습니다.
+> 상위 클래스 지정 없이 정의한 클래스는 자동적으로 빌드할 때 기본 클래스가 됩니다.
 
+#
 
+아래 예제는 `Vehicle` 이라는 기본 클래스를 정의합니다.
 
+이 기본 클래스는 `Double` 프로퍼티 타입으로 추론되고 `0.0` 의 기본값을 가지는 `currentSpeed` 라는 저장 프로퍼티를 정의합니다.
 
+`currentSpeed` 프로퍼티의 값은 차량에 대한 설명을 생성하기 위해 `description` 이라는 `String` 타입 읽기 전용 계산 프로퍼티에 사용됩니다.
+
+#
+
+`Vehicle` 기본 클래스는 `makeNoise` 라는 메서드도 정의합니다.
+
+이 메서드는 기본 `Vehicle` 인스턴스에 대해 실질적으로 아무 작업도 수행하지 않지만 나중에 `Vehicle` 의 하위 클래스에 의해 사용자 정의 됩니다.
+
+~~~ swift
+class Vehicle {
+    var currentSpeed = 0.0
+    var description: String {
+        return "traveling at \(currentSpeed) miles per hour"
+    }
+    func makeNoise() {
+        // do nothing - an arbitrary vehicle doesn't necessarily make a noise
+    }
+}
+~~~
+
+#
+
+타입 이름 뒤에 빈 소괄호를 작성한 초기화 구문을 사용하여 `Vehicle` 의 새로운 인스턴스를 생성합니다.
+
+~~~ swift
+let someVehicle = Vehicle()
+~~~
+
+#
+
+새로운 `Vehicle` 인스턴스를 생성한 후 해당 `description` 프로퍼티에 접근하여 차량의 현재 속도에 대한 설명을 출력할 수 있습니다.
+
+~~~ swift
+print("Vehicle: \(someVehicle.description)")
+// Vehicle: traveling at 0.0 miles per hour
+~~~
+
+`Vehicle` 클래스는 임의의 차량에 대한 공통 특성을 정의하지만 그 자체로는 많이 사용되지 않습니다.
+
+이를 더욱 유용하게 사용하려면 보다 구체적인 종류의 차량을 설명하도록 개선해야 합니다.
+
+<br>
+
+## 하위 클래스 (Subclassing)
 
 
 
