--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -81,10 +81,91 @@ print("Vehicle: \(someVehicle.description)")
 
 ## 하위 클래스 (Subclassing)
 
+하위 클래스는 기존 클래스를 기반으로 새로운 클래스를 만드는 작업입니다.
 
+하위 클래스는 기존 클래스의 특성을 상속받으며 이를 구체화할 수 있습니다.
 
+하위 클래스에 새로운 특성도 추가할 수 있습니다.
 
+#
 
+하위 클래스에 상위 클래스가 있음을 나타내려면 상위 클래스 이름 앞에 하위 클래스 이름을 콜론으로 구분하여 작성합니다.
+
+~~~ swift
+class SomeSubclass: SomeSuperclass {
+    // subclass definition goes here
+}
+~~~
+
+#
+
+다음의 예제는 `Vehicle` 을 상위 클래스로 가지는 `Bicycle` 이라는 하위 클래스를 정의합니다.
+
+~~~ swift
+class Bicycle: Vehicle {
+    var hasBasket = false
+}
+~~~
+
+새로운 `Bicycle` 클래스는 `currentSpeed` 와 `description` 프로퍼티 그리고 `makeNoise()` 메서드와 같은 `Vehicle` 의 모든 특성을 자동으로 얻습니다.
+
+#
+
+상속받은 특성 외에도 `Bicycle` 클래스는 `Bool` 타입으로 추론되는 기본값이 `false` 인 `hasBasket` 이라는 새로운 저장 프로퍼티를 정의합니다.
+
+#
+
+기본적으로 생성한 새로운 `Bicycle` 인스턴스는 바구니를 가지고 있지 않습니다.
+
+해당 인스턴스가 생성된 후에 특정 `Bicycle` 인스턴스의 `hasBasket` 프로퍼티를 `true` 로 설정할 수 있습니다.
+
+~~~ swift
+let bicycle = Bicycle()
+bicycle.hasBasket = true
+~~~
+
+#
+
+`Bicycle` 인스턴스의 상속된 `currentSpeed` 프로퍼티를 수정할 수 있고 상속된 `description` 프로퍼티를 조회할 수도 있습니다.
+
+~~~ swift
+bicycle.currentSpeed = 15.0
+print("Bicycle: \(bicycle.description)")
+// Bicycle: traveling at 15.0 miles per hour
+~~~
+
+#
+
+하위 클래스는 그 자체로 하위 클래스화 될 수 있습니다.
+
+다음 예제는 "tandem" 이라는 2인승 자전거를 위한 `Bicycle` 의 하위 클래스를 생성합니다.
+
+~~~ swift
+class Tandem: Bicycle {
+    var currentNumberOfPassengers = 0
+}
+~~~
+
+`Tandem` 은 `Bicycle` 의 모든 프로퍼티와 메서드를 상속하고 차례로 `Vehicle` 의 모든 프로퍼티와 메서드를 상속합니다.
+
+`Tandem` 하위 클래스는 기본값 `0` 인 `currentNumberOfPassengers` 라는 새로운 저장 프로퍼티를 추가합니다.
+
+#
+
+`Tandem` 의 인스턴스를 생성하면 새로운 프로퍼티와 상속된 프로퍼티로 작업할 수 있고 `Vehicle` 로 부터 상속된 읽기 전용 `description` 프로퍼티를 조회할 수 있습니다.
+
+~~~ swift
+let tandem = Tandem()
+tandem.hasBasket = true
+tandem.currentNumberOfPassengers = 2
+tandem.currentSpeed = 22.0
+print("Tandem: \(tandem.description)")
+// Tandem: traveling at 22.0 miles per hour
+~~~
+
+<br>
+
+## 재정의 (Overriding)
 
 
 
