--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -167,6 +167,28 @@ print("Tandem: \(tandem.description)")
 
 ## 재정의 (Overriding)
 
+하위 클래스는 상위 클래스에서 상속 받을 인스턴스 메서드, 타입 메서드, 인스턴스 프로퍼티, 타입 프로퍼티 또는 서브 스크립트에 대한 자체 사용자 지정 구현을 제공할 수 있습니다.
+
+이것을 재정의 라고 합니다.
+
+#
+
+상속될 특성을 재정의 하려면 재정의 할 정의 앞에 `override` 키워드를 추가합니다.
+
+이렇게 하면 재정의를 명확하게 제공하고 실수로 일치하는 정의를 제공하지 않도록 합니다.
+
+실수로 재정의하면 예기치 않은 동작이 발생할 수 있으며 `override` 키워드가 없는 재정의는 코드가 컴파일 될 때 에러가 발생합니다.
+
+#
+
+`override` 키워드는 Swift 컴파일러에게 재정의 클래스의 상위 클래스 또는 해당 상위 클래스 중 하나에 재정의에 제공한 것과 일치하는 선언이 있는지 확인하도록 요청합니다.
+
+이 검사를 통해 재정의 정의가 올바른지 확인합니다.
+
+<br>
+
+### 상위 클래스 메서드, 프로퍼티 및 서브 스크립트 접근 (Accessing Superclass Methods, Properties, and Subscripts)
+
 
 
 
