--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -189,6 +189,24 @@ print("Tandem: \(tandem.description)")
 
 ### 상위 클래스 메서드, 프로퍼티 및 서브 스크립트 접근 (Accessing Superclass Methods, Properties, and Subscripts)
 
+하위 클래스에 메서드, 프로퍼티 또는 서브 스크립트 재정의를 제공할 때 재정의의 일부로 기존 상위 클래스 구현을 사용하는 것이 유용한 경우가 있습니다.
+
+예를 들어 기존 구현의 동작을 구체화하거나 기존 상속된 변수에 수정된 값을 저장할 수 있습니다.
+
+#
+
+이것이 적절한 경우 `super` 접두사를 사용하여 메서드, 프로퍼티 또는 서브 스크립트의 상위 클래스 버전에 접근합니다.
+
+- `someMethod()` 라는 재정의된 메서드는 재정의한 메서드 구현 내에서 `super.someMethod()` 를 호출하여 상위 클래스 버전의 `someMethod()` 를 호출할 수 있습니다.
+
+- `someProperty` 라는 재정의된 프로퍼티는 재정의한 getter 또는 setter 구현 내에서 `super.someProperty` 로 상위 클래스 버전의 `someProperty` 에 접근할 수 있습니다.
+
+- `someIndex` 를 위한 재정의된 서브 스크립트는 재정의한 서브 스크립트 구현 내에서 `super[someIndex]` 로 상위 클래스 버전의 동일한 서브 스크립트에 접근할 수 있습니다.
+
+<br>
+
+### 메서드 재정의 (Overriding Methods)
+
 
 
 
