--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -207,8 +207,34 @@ print("Tandem: \(tandem.description)")
 
 ### 메서드 재정의 (Overriding Methods)
 
+상속된 인스턴스 메서드 또는 타입 메서드를 재정의하여 하위 클래스 내에서 메서드의 맞춤형 또는 대체 구현을 제공할 수 있습니다.
 
+#
 
+다음 예제는 `Vehicle` 을 상속한 `Train` 에서 `makeNoise()` 메서드를 재정의 하는 `Train` 이라는 `Vehicle` 의 새로운 하위 클래스를 정의합니다.
+
+~~~ swift
+class Train: Vehicle {
+    override func makeNoise() {
+        print("Choo Choo")
+    }
+}
+
+~~~
+
+#
+
+`Train` 의 새로운 인스턴스를 생성하고 해당 `makeNoise()` 메서드를 호출 하면 하위 클래스 버전인 `Train` 의 메서드가 호출되는 것을 볼 수 있습니다.
+
+~~~ swift
+let train = Train()
+train.makeNoise()
+// Prints "Choo Choo"
+~~~
+
+<br>
+
+### 프로퍼티 재정의 (Overriding Properties)
 
 
 
