--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -236,6 +236,67 @@ train.makeNoise()
 
 ### 프로퍼티 재정의 (Overriding Properties)
 
+상속된 인스턴스 또는 타입 프로퍼티를 재정의하여 해당 프로퍼티에 대한 고유한 사용자 지정 getter 와 setter 를 제공하거나 프로퍼티 관찰자를 추가하여 기본 프로퍼티 값이 변경될 때 관찰할 수있도록 할 수 있습니다.
+
+<br>
+
+#### 프로퍼티 getter 및 setter 재정의 (Overriding Property Getters and Setters)
+
+상속된 프로퍼티가 소스에서 저장 프로퍼티로 구현되거나 계산 프로퍼티로 구현되는지 여부에 관계없이 상속된 프로퍼티를 재정의 하기 위해 사용자 지정 getter 및 setter 를 제공할 수 있습니다.
+
+상속된 프로퍼티의 저장 또는 계산 특성은 하위 클래스에서 알 수 없습니다.
+
+하위 클래스는 상속된 프로퍼티의 특정 이름과 타입만 알고 있습니다.
+
+재정의하는 프로퍼티의 이름과 타입을 모두 명시해야 컴파일러가 재정의가 이름과 타입이 동일한 상위 클래스 프로퍼티와 일치하는지 확인할 수 있습니다.
+
+#
+
+하위 클래스 프로퍼티 재정의에서 getter 와 setter 를 모두 제공하여 상속된 읽기 전용 프로퍼티를 읽기-쓰기 프로퍼티로 표시할 수 있습니다.
+
+그러나 상속된 읽기-쓰기 프로퍼티를 읽기 전용 프로퍼티로 표시할 수 없습니다.
+
+> Note    
+> 프로퍼티 재정의의 일부로 setter 를 제공하는 경우 해당 재정의에 대한 getter 도 제공해야 합니다.
+> 재정의한 getter 내에서 상속된 프로퍼티 값을 수정하지 않으려면 getter 에서 `super.someProperty` 를 반환하면 상속된 값을 간편하게 전달할 수 있습니다.
+> 여기서 재정의하는 프로퍼티의 이름은 `someProperty` 입니다.
+
+#
+
+다음의 예제는 `Vehicle` 의 하위 클래스인 `Car` 라는 새로운 클래스를 정의합니다.
+
+`Car` 클래스는 기본 정수값 `1` 을 갖는 `gear` 라는 새로운 저장 프로퍼티를 가집니다.
+
+`Car` 클래스는 `Vehicle` 로 부터 상속받은 `description` 프로퍼티를 재정의하여 현재 기어를 포함하는 사용자 정의 설명을 제공합니다.
+
+~~~ swift
+class Car: Vehicle {
+    var gear = 1
+    override var description: String {
+        return super.description + " in gear \(gear)"
+    }
+}
+~~~
+
+`description` 프로퍼티 재정의는 `Vehicle` 클래스의 `description` 프로퍼티를 반환하는 `super.description` 호출로 시작됩니다.
+
+그런 다음 `Car` 클래스 버전의 `description` 은 설명 끝에 텍스트를 추가하여 현재 기어에 대한 정보를 제공합니다.
+
+#
+
+`Car` 클래스의 인스턴스를 생성하고 해당 클래스의 `gear` 와 `description` 프로퍼티를 설정하면 `description` 프로퍼티는 `Car` 클래스 내에서 정의된 설명을 반환하는 것을 볼 수 있습니다.
+
+~~~ swift
+let car = Car()
+car.currentSpeed = 25.0
+car.gear = 3
+print("Car: \(car.description)")
+// Car: traveling at 25.0 miles per hour in gear 3
+~~~
+
+<br>
+
+#### 프로퍼티 관찰자 재정의 (Overriding Property Observers)
 
 
 
