--- a/Swift Documentation/2.Language Guide/13.Inheritance.md
+++ b/Swift Documentation/2.Language Guide/13.Inheritance.md
@@ -298,20 +298,69 @@ print("Car: \(car.description)")
 
 #### 프로퍼티 관찰자 재정의 (Overriding Property Observers)
 
+프로퍼티 재정의를 사용하여 상속된 프로퍼티에 프로퍼티 관찰자를 추가할 수 있습니다.
 
+이를 통해 해당 프로퍼티가 기존에 구현된 방식에 관계없이 상속된 프로퍼티의 값이 변경될 때 알림을 받을 수 있습니다.
 
+프로퍼티 관찰자에 대한 자세한 내용은 [프로퍼티 관찰자 (Property Observers)]() 를 참조하세요.
 
+> Note
+> 상속된 상수 저장 프로퍼티 또는 상속된 읽기 전용 계산 프로퍼티에는 프로퍼티 관찰자를 추가할 수 없습니다.
+> 이러한 프로퍼티의 값은 설정할 수 없으므로 재정의의 일부로 `willSet` 또는 `didSet` 구현을 제공하는 것은 적절하지 않습니다.
+>
+> 또한 동일한 프로퍼티에 대해 재정의한 setter 와 재정의한 프로퍼티 관찰자를 동시에 제공할 수 없습니다.
+> 프로퍼티의 값이 변경되는 것을 관찰하기를 원하고 이미 프로퍼티에 대한 사용자 지정 setter 를 제공하고 있는 경우 사용자 지정 setter 내에서 값 변경을 간단하게 관찰할 수 있습니다.
 
+#
 
+다음 예제는 `Car` 의 하위 클래스인 `AutomaticCar` 라는 새로운 클래스를 정의합니다.
 
+`AutomaticCar` 클래스는 현재 속도에 따라 사용할 적절한 기어를 자동으로 선택하는 자동 기어박스가 있는 자동차를 나타냅니다.
 
+~~~ swift
+class AutomaticCar: Car {
+    override var currentSpeed: Double {
+        didSet {
+            gear = Int(currentSpeed / 10.0) + 1
+        }
+    }
+}
+~~~
 
+`AutomaticCar` 인스턴스의 `currentSpeed` 프로퍼티를 설정할 때마다 프로퍼티의 `didSet` 관찰자는 새로운 속도에 맞는 적절한 기어를 인스턴스의 `gear` 프로퍼티에 설정합니다.
 
+구체적으로 프로퍼티 관찰자는 새로운 `currentSpeed` 값을 `10` 으로 나누고 가까운 정수로 반내림한 다음 `1` 을 더한 값을 기어로 선택합니다.
 
+`35.0` 의 속도는 기어가 `4` 가 됩니다.
 
+~~~ swift
+let automatic = AutomaticCar()
+automatic.currentSpeed = 35.0
+print("AutomaticCar: \(automatic.description)")
+// AutomaticCar: traveling at 35.0 miles per hour in gear 4
+~~~
 
+<br>
 
+## 재정의 방지 (Preventing Overrides)
 
+메서드, 프로퍼티 또는 서브 스크립트를 `final` 로 표시하여 재정의 되는 것을 방지할 수 있습니다.
+
+메서드, 프로퍼티 또는 서브 스크립트에 키워드 앞에 `final` 수정자를 작성하여 이를 수행합니다. (`final var`, `final func`, `final class func`, `final subscript` 와 같이 작성)
+
+#
+
+하위 클래스에서 `final` 메서드, 프로퍼티 또는 서브 스크립트를 재정의하려는 시도는 컴파일 타임에 오류를 발생시킵니다.
+
+확장한 클래스에 추가된 메서드, 프로퍼티 또는 서브 스크립트는 확장의 정의 내에서 `final` 로 표시될 수도 있습니다.
+
+자세한 내용은 [확장 (Extensions)]() 를 참조하세요.
+
+#
+
+클래스 정의에서 `class` 키워드 앞에 `final` 수정자를 작성하여 전체 클래스를 `final` 클래스로 표시할 수 있습니다.(`final class`)
+
+`final` 클래스를 하위 클래스로 만들려는 시도는 컴파일 타임에 오류를 발생시킵니다.
 
 ***
 
