--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1,5 +1,51 @@
 # Initialization (초기화)
 
+타입의 저장된 프로퍼티에 대한 초기값을 설정하고 초기 설정을 수행합니다.
+
+#
+
+초기화는 사용할 클래스, 구조체 또는 열거형의 인스턴스를 준비하는 단계입니다.
+
+이 단계에는 해당 인스턴스의 각 저장 프로퍼티에 대한 초기값을 설정하고 새로운 인스턴스를 사용할 준비가 되기 전에 필요한 기타 설정 또는 초기화를 수행하는 작업이 포함됩니다.
+
+#
+
+특정 타입의 새로운 인스턴스를 생성하기 위해 호출할 수 있는 특수 메서드와 유사한 초기화 구문을 정의하여 초기화를 구현합니다.
+
+Objective-C 초기화 구문과 달리 Swift 초기화 구문은 값을 반환하지 않습니다.
+
+초기화의 주요 역할은 새로운 인스턴스가 처음 사용되기 전에 올바르게 초기화 되었는지 확인하는 것입니다.
+
+#
+
+클래스 타입의 인스턴스는 해당 클래스의 인스턴스가 할당 해제되기 직전에 사용자 정의 정리를 수행하는 초기화 해제 (deinitializer) 도 구현할 수 있습니다.
+
+초기화 해제에 대한 자세한 내용은 [초기화 해제 (Deinitialization)]() 를 참조하세요.
+
+<br>
+
+## 저장 프로퍼티의 초기값 설정 (Setting Initial Values for Stored Properties)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
