--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -77,6 +77,31 @@ print("The default temperature is \(f.temperature)° Fahrenheit")
 
 ### 기본 파라미터 값 (Default Property Values)
 
+위에서 보았듯이 초기화 구문 내에서 저장 프로퍼티의 초기값을 설정할 수 있습니다.
+
+또는 프로퍼티 선언의 일부로 기본 프로퍼티 값을 지정합니다.
+
+프로퍼티가 정의될 때 프로퍼티에 초기값을 할당하여 기본 프로퍼티 값을 지정합니다.
+
+> Note    
+> 프로퍼티가 항상 동일한 초기값을 사용하는 경우 초기화 구문 내에서 값을 설정하기보다 기본값을 제공하세요.
+> 결과는 같지만 기본값은 프로퍼티의 초기화를 해당 선언과 더 밀접하게 연결합니다.
+> 이를 통해 더 짧고 명확한 초기화가 가능하며 기본값에서 프로퍼티의 타입을 추론할 수 있습니다.
+> 또한 기본값은 이 챕터 후반부에 설명된 대로 기본 초기화 및 초기화 구문 상속을 더 쉽게 활용할 수 있습니다.
+
+#
+
+프로퍼티가 선언되는 시점에 `temperature` 에 기본값을 제공하여 위의 `Fahrenheit` 구조체를 더 간단한 형식으로 작성할 수 있습니다.
+
+~~~ swift
+struct Fahrenheit {
+    var temperature = 32.0
+}
+~~~
+
+<br>
+
+## 초기화 구문 사용자 정의 (Customizing Initialization)
 
 
 
