--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -103,8 +103,47 @@ struct Fahrenheit {
 
 ## 초기화 구문 사용자 정의 (Customizing Initialization)
 
+다음 섹션에 설명된 대로 입력 파라미터 및 옵셔널 프로퍼티 타입을 사용하거나 초기화 중에 상수 프로퍼티를 할당하여 초기화 단계를 사용자 정의할 수 있습니다.
 
+<br>
 
+### 초기화 파라미터 (Initialization Parameters)
+
+초기화 파라미터를 초기화 정의의 일부로 제공하여 초기화 단계를 사용자 정의하는 값의 타입과 이름을 정의할 수 있습니다.
+
+초기화 파라미터는 함수 및 메서드 파라미터와 동일한 기능 및 구문을 갖습니다.
+
+#
+
+다음 예제는 섭씨 온도로 표시되는 온도를 저장하는 `Celsius` 구조체를 정의합니다.
+
+`Celsius` 구조체는 다른 온도 체계에서의 값으로 구조체의 새로운 인스턴스를 초기화하기 위해 `init(fromFahrenheit:)` 와 `init(fromKelvin:)` 이라고 하는 2개의 사용자 정의 초기화 구문을 구현합니다.
+
+~~~ swift
+struct Celsius {
+    var temperatureInCelsius: Double
+    init(fromFahrenheit fahrenheit: Double) {
+        temperatureInCelsius = (fahrenheit - 32.0) / 1.8
+    }
+    init(fromKelvin kelvin: Double) {
+        temperatureInCelsius = kelvin - 273.15
+    }
+}
+let boilingPointOfWater = Celsius(fromFahrenheit: 212.0)
+// boilingPointOfWater.temperatureInCelsius is 100.0
+let freezingPointOfWater = Celsius(fromKelvin: 273.15)
+// freezingPointOfWater.temperatureInCelsius is 0.0
+~~~
+
+첫번째 초기화 구문은 `fromFahrenheit` 의 인수 레이블과 `fahrenheit` 의 파라미터 이름을 가진 단일 초기화 파라미터를 가지고 있습니다.
+
+두번째 초기화 구문은 `fromKelvin` 의 인수 레이블과 `kelvin` 의 파라미터 이름을 가진 단일 초기화 파라미터를 가지고 있습니다.
+
+두 초기화 구문은 모두 단일 인수를 해당 섭씨 값으로 변환하고 `temperatureInCelsius` 라는 프로퍼티에 값을 저장합니다.
+
+<br>
+
+### 파라미터 이름 및 인수 레이블 (Parameter Names and Argument Labels)
 
 
 
