--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -145,6 +145,69 @@ let freezingPointOfWater = Celsius(fromKelvin: 273.15)
 
 ### 파라미터 이름 및 인수 레이블 (Parameter Names and Argument Labels)
 
+함수와 메서드 파라미터와 마찬가지로 초기화 파라미터에는 초기화 구문의 본문 내에서 사용할 파라미터 이름과 초기화 호출 시 사용할 인수 레이블이 모두 있을 수 있습니다.
+
+#
+
+그러나 초기화 구문에는 함수 및 메서드와 달리 소괄호 앞에 식별 함수 이름이 없습니다.
+
+따라서 초기화 구문 파라미터의 이름과 타입은 어떤 초기화 구문을 호출해야 하는지 식별하는데 특히 중요한 역할을 합니다.
+
+이 때문에 Swift 는 사용자가 파라미터를 제공하지 않을 경우 초기화의 모든 파라미터에 대해 자동 인수 레이블을 제공합니다.
+
+#
+
+다음 예제는 `red`, `green`, `blue` 라는 3가지 상수 프로퍼티를 사용하여 `Color` 라는 구조체를 정의합니다.
+
+이러한 프로퍼티는 색상의 빨간색, 초록색, 파란색 의 양을 나타내는 `0.0` 과 `1.0` 사이의 값을 저장합니다.
+
+#
+
+`Color` 는 빨간색, 초록색, 파란색의 구성 요소에 대해 적절하게 이름이 지정된 3가지 `Double` 타입 파라미터가 있는 초기화 구문을 제공합니다.
+
+`Color` 는 3가지 색상 구성 요소 모두에 대해 동일한 값을 제공할 때 사용되는 `white` 파라미터를 가진 두번째 초기화 구문을 제공합니다.
+
+~~~ swift
+struct Color {
+    let red, green, blue: Double
+    init(red: Double, green: Double, blue: Double) {
+        self.red   = red
+        self.green = green
+        self.blue  = blue
+    }
+    init(white: Double) {
+        red   = white
+        green = white
+        blue  = white
+    }
+}
+~~~
+
+#
+
+두 초기화 구문은 각 초기화 구문 파라미터에 명명된 값을 제공하여 새로운 `Color` 인스턴스를 생성하는데 사용할 수 있습니다.
+
+~~~ swift
+let magenta = Color(red: 1.0, green: 0.0, blue: 1.0)
+let halfGray = Color(white: 0.5)
+~~~
+
+#
+
+인수 레이블을 사용하지 않고 이러한 초기화 구문을 호출하는 것은 불가능합니다.
+
+인수 레이블은 정의 되었다면 항상 초기화에서 사용되어야 하고 생략하면 컴파일 타임 에러가 발생합니다.
+
+~~~ swift
+let veryGreen = Color(0.0, 1.0, 0.0)
+// this reports a compile-time error - argument labels are required
+~~~
+
+<br>
+
+### 인수 레이블이 없는 초기화 구문 파라미터 (Initializer Parameters Without Augument Labels)
+
+
 
 
 
