--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -207,6 +207,45 @@ let veryGreen = Color(0.0, 1.0, 0.0)
 
 ### 인수 레이블이 없는 초기화 구문 파라미터 (Initializer Parameters Without Augument Labels)
 
+초기화 파라미터에 인수 레이블을 사용하지 않으려면 파라미터에 대한 명시적인 인수 레이블 대신 언더바 (`_`) 를 작성하여 기본 동작을 재정의 합니다.
+
+#
+
+다음은 섭씨 온도에 대한 `Double` 값으로 새로운 `Celsius` 인스턴스를 생성하기 위한 추가 초기화 구문이 포함된 [초기화 파라미터 (Initialization Parameters)]() 의 `Celsius` 예제의 확장된 버전입니다.
+
+~~~ swift
+struct Celsius {
+    var temperatureInCelsius: Double
+    init(fromFahrenheit fahrenheit: Double) {
+        temperatureInCelsius = (fahrenheit - 32.0) / 1.8
+    }
+    init(fromKelvin kelvin: Double) {
+        temperatureInCelsius = kelvin - 273.15
+    }
+    init(_ celsius: Double) {
+        temperatureInCelsius = celsius
+    }
+}
+let bodyTemperature = Celsius(37.0)
+// bodyTemperature.temperatureInCelsius is 37.0
+~~~
+
+`Celsius(37.0)` 초기화 구문 호출은 인수 레이블이 필요 없이 의도가 명확합니다.
+
+따라서 이름 없는 `Double` 값을 제공하여 호출할 수 있도록 `init(_ celsius: Double)` 초기화 구문을 작성하는 것이 적절합니다.
+
+<br>
+
+### 옵셔널 프로퍼티 타입 (Optional Property Types)
+
+
+
+
+
+
+
+
+
 
 
 
