--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -238,7 +238,45 @@ let bodyTemperature = Celsius(37.0)
 
 ### 옵셔널 프로퍼티 타입 (Optional Property Types)
 
+사용자 정의 타입에 논리적으로 "값 없음" 이 허용되는 저장 프로퍼티가 있는 경우 (초기화 중에 해당 값을 설정할 수 없거나 나중에 "값 없음" 을 가질 수 있기 때문)
 
+해당 프로퍼티를 옵셔널 타입 프로퍼티로 선언합니다.
+
+옵셔널 타입의 프로퍼티 값은 `nil` 값으로 자동 초기화됩니다.
+
+이는 프로퍼티가 초기화 중에 "아직 값 없음" 을 가진다는 의도를 나타냅니다.
+
+#
+
+다음 예제는 `response` 라는 옵셔널 `String` 프로퍼티를 가지는 `SurveyQuestion` 이라는 클래스를 정의합니다.
+
+~~~ swift
+class SurveyQuestion {
+    var text: String
+    var response: String?
+    init(text: String) {
+        self.text = text
+    }
+    func ask() {
+        print(text)
+    }
+}
+let cheeseQuestion = SurveyQuestion(text: "Do you like cheese?")
+cheeseQuestion.ask()
+// Prints "Do you like cheese?"
+cheeseQuestion.response = "Yes, I do like cheese."
+~~~
+
+설문조사 질문에 대한 응답은 질문을 받을 때까지 알 수 없으므로 `response` 프로퍼티 타입은 `String?` 또는 "옵셔널 `String`" 타입으로 선언됩니다.
+
+`SurveyQuestion` 의 새로운 인스턴스가 초기화 되면 "아직 문자열 없음" 을 의미하는 기본값 `nil` 이 자동으로 할당됩니다.
+
+<br>
+
+### 초기화 중 상수 프로퍼티 할당 (Assigning Constant Properties During Initialization)
+
+
+ 
 
 
 
