--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -275,6 +275,41 @@ cheeseQuestion.response = "Yes, I do like cheese."
 
 ### 초기화 중 상수 프로퍼티 할당 (Assigning Constant Properties During Initialization)
 
+초기화가 완료될 때까지 명확한 값으로 설정되는 한 초기화 중 언제든지 상수 프로퍼티에 값을 할당할 수 있습니다.
+
+상수 프로퍼티에 값이 할당되면 더 이상 수정할 수 없습니다.
+
+> Note    
+> 클래스 인스턴스의 경우 상수 프로퍼티는 해당 프로퍼티를 도입한 클래스에 의해서만 초기화 중에 수정될 수 있습니다.
+> 하위 클래스에서는 수정할 수 없습니다.
+
+#
+
+위의 `SurveyQuestion` 예제를 수정하여 `text` 프로퍼티에 대해 변수 프로퍼티가 아닌 상수 프로퍼티를 사용하여 `SurveyQuestion` 인스턴스가 생성된 후에는 질문이 변경되지 않음을 나타낼 수 있습니다.
+
+`text` 프로퍼티가 이제 상수 이더라도 클래스의 초기화 구문 내에서 계속 설정할 수 있습니다.
+
+~~~ swift
+class SurveyQuestion {
+    let text: String
+    var response: String?
+    init(text: String) {
+        self.text = text
+    }
+    func ask() {
+        print(text)
+    }
+}
+let beetsQuestion = SurveyQuestion(text: "How about beets?")
+beetsQuestion.ask()
+// Prints "How about beets?"
+beetsQuestion.response = "I also like beets. (But not with cheese.)"
+~~~
+
+<br>
+
+## 기본 초기화 구문 (Default Initializers)
+
 
  
 
