--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -310,8 +310,37 @@ beetsQuestion.response = "I also like beets. (But not with cheese.)"
 
 ## 기본 초기화 구문 (Default Initializers)
 
+Swift 는 모든 프로퍼티에 대한 기본값을 제공하고 최소한 하나의 초기화 구문을 제공하지 않는 모든 구조체 또는 클래스에 대해 기본 초기화 구문을 제공합니다.
 
- 
+기본 초기화 구문은 모든 프로퍼티가 기본값으로 설정된 새로운 인스턴스를 생성합니다.
+
+#
+
+이 예제는 쇼핑 리스트에 있는 항목의 이름, 수량 그리고 구매 상태를 캡슐화하는 `ShoppingListItem` 클래스를 정의합니다.
+
+~~~ swift
+class ShoppingListItem {
+    var name: String?
+    var quantity = 1
+    var purchased = false
+}
+var item = ShoppingListItem()
+~~~
+
+`ShoppingListItem` 클래스의 모든 프로퍼티는 기본값을 가지고 있고 상위 클래스가 없는 기본 클래스이기 때문에 모든 프로퍼티가 기본값으로 설정된 새로운 인스턴스를 생성하()는 기본 초기화 구현을 자동으로 갖습니다.
+
+(`name` 프로퍼티는 코드에서 값을 작성하지 않았지만 옵셔널 `String` 프로퍼티 이므로 자동으로 기본값 `nil` 을 받습니다.)
+
+위의 예제는 `ShoppingListItem` 클래스의 기본 초기화를 사용하여 클래스의 새로운 인스턴스를 생성합니다.
+
+`ShoppingListItem()` 으로 작성된 초기화 구문을 사용하고 클래스의 새로운 인스턴스를 `item` 이라는 변수에 할당합니다.
+
+<br>
+
+### 구조체 타입에 대한 멤버별 초기화 구문 (Memberwise Initializers for Structure Types)
+
+
+
 
 
 
