--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -339,9 +339,55 @@ var item = ShoppingListItem()
 
 ### 구조체 타입에 대한 멤버별 초기화 구문 (Memberwise Initializers for Structure Types)
 
+구조체 타입은 자체 사용자 정의 초기화 구문을 정의하지 않는 경우 자동으로 멤버별 초기화 구문을 받습니다.
+
+기본 초기화 구문과 다르게 구조체는 기본값을 가지지 않는 저장 프로퍼티가 있더라도 멤버별 초기화 구문을 받습니다.
+
+#
+
+멤버별 초기화 구문은 새로운 구조체 인스턴스의 멤버 프로퍼티를 초기화하는 간단한 방법입니다.
+
+새로운 인스턴스의 프로퍼티에 대한 초기값은 이름으로 멤버별 초기화 구문으로 전달될 수 있습니다.
+
+#
+
+아래 예제는 `width` 와 `height` 라는 2가지 프로퍼티를 가진 `Size` 구조체를 정의합니다.
+
+두 프로퍼티 모두 `0.0` 의 기본값을 할당하여 `Double` 타입으로 추론됩니다.
+
+#
+
+`Size` 구조체는 새로운 `Size` 인스턴스를 초기화는데 사용할 수 있는 멤버별 초기화 `init(width:height:)` 를 자동으로 받습니다.
+
+~~~ swift
+struct Size {
+    var width = 0.0, height = 0.0
+}
+let twoByTwo = Size(width: 2.0, height: 2.0)
+~~~
+
+#
+
+멤버별 초기화 구문을 호출할 때 기본값을 가지는 모든 프로퍼티의 값을 생략할 수 있습니다.
+
+위의 예제에서 `Size` 구조체는 `height` 와 `width` 프로퍼티 모두 기본값을 가지고 있습니다.
+
+프로퍼티 중 하나 또는 둘다 생략할 수 있고 초기화 구문은 생략된 항목에 대해 기본값을 사용합니다.
+
+~~~ swift
+let zeroByTwo = Size(height: 2.0)
+print(zeroByTwo.width, zeroByTwo.height)
+// Prints "0.0 2.0"
 
 
+let zeroByZero = Size()
+print(zeroByZero.width, zeroByZero.height)
+// Prints "0.0 0.0"
+~~~
 
+<br>
+
+## 값 타입에 대한 초기화 구문 위임 (Initializer Delegation for Value Types)
 
 
 
