--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -389,11 +389,123 @@ print(zeroByZero.width, zeroByZero.height)
 
 ## 값 타입에 대한 초기화 구문 위임 (Initializer Delegation for Value Types)
 
+초기화 구문은 다른 초기화 구문을 호출하여 인스턴스 초기화의 일부를 수행할 수 있습니다.
 
+초기화 구문 위임 이라는 이 프로세스는 여러 초기화 구문에서 코드가 중복되는 것을 방지합니다.
 
+#
 
+초기화 구문 위임이 작동하는 방식과 허용되는 위임 형식에 대한 규칙은 값 타입과 클래스 타입에 따라 다릅니다.
 
+값 타입(구조체 및 열거형) 은 상속을 지원하지 않으므로 초기화 구문 위임 프로세스는 자신이 제공하는 다른 초기화에만 위임할 수 있기 때문에 상대적으로 간단합니다.
 
+그러나 클래스는 [상속 (Inheritance)]() 에 설명된 대로 다른 클래스에서 상속할 수 있습니다.
+
+이는 클래스가 상속하는 모든 저장 프로퍼티에 초기화 중에 적절한 값이 할당되도록 보장하는 추가 책임이 있음을 의미합니다.
+
+이러한 책임은 아래 [클래스 상속 및 초기화 (Class Inheritance and Initialization)]() 에 설명되어 있습니다.
+
+#
+
+값 타입의 경우 사용자 정의 초기화 구문을 작성할 때 동일한 값 타입의 다른 초기화 구문을 참조하기 위해 `self.init` 을 사용합니다.
+
+초기화 구문 내에서만 `self.init` 을 호출할 수 있습니다.
+
+#
+
+값 타입에 대해 사용자 정의 초기화 구문을 정의하면 해당 타입에 대한 기본 초기화 구문 또는 구조체의 경우 멤버별 초기화 구문에 더이상 접근할 수 없습니다.
+
+이 제약은 자동 초기화 구문을 사용하는 누군가가 더 복잡한 초기화 구문에서 제공하는 추가 필수 설정을 실수로 우회하는 것을 방지합니다.
+
+> Note    
+> 사용자 정의 값 타입을 기본 초기화 구문과 멤버별 초기화 구문 및 사용자 정의 초기화 구문으로 초기화 하려면 값 타입의 원래 구현의 일부가 아닌 확장에 사용자 정의 초기화 구문을 작성하세요.
+> 자세한 내용은 [확장 (Extensions)]() 를 참조하세요.
+
+#
+
+다음의 예제는 기하학적 직사각형을 나타내는 사용자 정의 `Rect` 구조체를 정의합니다.
+
+이 예제는 `Size` 와 `Point` 라는 2개의 지원 구조체가 필요하고 둘 다 모든 프로퍼티에 대해 `0.0` 의 기본값을 제공합니다.
+
+~~~ swift
+struct Size {
+    var width = 0.0, height = 0.0
+}
+struct Point {
+    var x = 0.0, y = 0.0
+}
+~~~
+
+#
+
+아래의 `Rect` 구조체를 기본 값 0으로 초기화된 `origin` 과 `size` 프로퍼티 값을 사용하거나 특정 원점과 크기를 제공하거나 특정 중심점과 크기를 제공하는 3가지 방법중 하나로 초기화할 수 있습니다.
+
+이러한 초기화 옵션은 `Rect` 구조체 정의의 일부인 3개의 사용자 정의 초기화 구문으로 표시됩니다.
+
+~~~ swift
+struct Rect {
+    var origin = Point()
+    var size = Size()
+    init() {}
+    init(origin: Point, size: Size) {
+        self.origin = origin
+        self.size = size
+    }
+    init(center: Point, size: Size) {
+        let originX = center.x - (size.width / 2)
+        let originY = center.y - (size.height / 2)
+        self.init(origin: Point(x: originX, y: originY), size: size)
+    }
+}
+~~~
+
+첫번째 `Rect` 초기화 구문인 `init()` 은 자체 사용자 정의 초기화 구문이 없는 경우 구조체가 수신했을 기본 초기화 구문과 기능적으로 동일합니다.
+
+이 초기화 구문은 빈 중괄호 `{}` 로 표시된 빈 본문을 가집니다.
+
+이 초기화 구문을 호출하면 `origin` 과 `size` 프로퍼티는 프로퍼티 정의에서 `Point(x: 0.0, y: 0.0)` 과 `Size(width: 0.0, height: 0.0)` 의 기본값으로 초기화되는 `Rect` 인스턴스를 반환합니다.
+
+~~~ swift
+let basicRect = Rect()
+// basicRect's origin is (0.0, 0.0) and its size is (0.0, 0.0)
+~~~
+
+#
+
+두번째 `Rect` 초기화 구문인 `init(origin:size:)` 은 자체 사용자 정의 초기화 구문이 없는 경우 구조체가 수신했을 때 멤버별 초기화 구문과 기능적으로 동일합니다.
+
+이 초기화 구문은 단순히 `origin` 과 `size` 인수값을 적절한 저장 프로퍼티에 할당합니다.
+
+~~~ swift
+let originRect = Rect(origin: Point(x: 2.0, y: 2.0),
+    size: Size(width: 5.0, height: 5.0))
+// originRect's origin is (2.0, 2.0) and its size is (5.0, 5.0)
+~~~
+
+#
+
+세번째 `Rect` 초기화 구문인 `init(center:size:)` 는 좀 더 복잡합니다.
+
+`center` 포인트와 `size` 값을 기반으로 적절한 원점을 계산하는 것으로 시작합니다.
+
+그런 다음 적절한 프로퍼티에 새로운 원점과 크기 값을 저장하는 `init(origin:size:)` 초기화 구문을 호출 (또는 위임) 합니다.
+
+~~~ swift
+let centerRect = Rect(center: Point(x: 4.0, y: 4.0),
+    size: Size(width: 3.0, height: 3.0))
+// centerRect's origin is (2.5, 2.5) and its size is (3.0, 3.0)
+~~~
+
+`init(center:size:)` 초기화 구문은 적절한 프로퍼티 자체에 `origin` 과 `size` 의 새로운 값을 할당했을 수 있습니다.
+
+그러나 `init(center:size)` 초기화 구문이 해당 기능을 이미 정확하게 제공하는 기존 초기화를 활용하는 것이 더 편리하고 의도가 더 명확합니다.
+
+> Note    
+> `init()` 과 `init(origin:size:)` 초기화 구문을 직접 정의하지 않고 이 예제를 작성하는 다른 방법은 [확장 (Extensions)]() 을 참조하세요.
+
+<br>
+
+## 클래스 상속과 초기화 (Class Inheritance and Initialization)
 
 
 
