--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -507,6 +507,18 @@ let centerRect = Rect(center: Point(x: 4.0, y: 4.0),
 
 ## 클래스 상속과 초기화 (Class Inheritance and Initialization)
 
+클래스가 상위 클래스에서 상속하는 모든 프로퍼티를 포함하여 클래스의 모든 저장 프로퍼티에는 초기화 중에 초기 값이 할당되어야 합니다.
+
+#
+
+Swift 는 모든 저장 프로퍼티가 초기값을 받을 수 있도록 돕기 위해 클래스 타입에 대해 2가지 종류의 초기화 구문을 정의합니다.
+
+이를 지정 초기화 구문과 편의 초기화 구문 이라고 합니다.
+
+<br>
+
+### 지정 초기화 구문과 편의 초기화 구문 (Designated Initializers and Convenience Initializers)
+
 
 
 
