--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -519,6 +519,40 @@ Swift 는 모든 저장 프로퍼티가 초기값을 받을 수 있도록 돕기
 
 ### 지정 초기화 구문과 편의 초기화 구문 (Designated Initializers and Convenience Initializers)
 
+지정 초기화 구문은 클래스의 기본 초기화 구문입니다.
+
+지정 초기화는 해당 클래스에 의해 도입된 모든 프로퍼티를 완전히 초기화하고 적절한 상위 클래스 초기화를 호출하여 초기화 프로세스를 상위 클래스까지 연결하여 계속합니다.
+
+#
+
+클래스에는 지정 초기화 구문이 거의 없는 경향이 있으며 클래스에 하나만 있는 경우가 매우 일반적입니다.
+
+지정 초기화 구문은 초기화가 수행되고 초기화 프로세스가 상위 클래스 체인까지 계속되는 "funnel" 지점입니다.
+
+#
+
+모든 클래스는 적어도 하나의 지정 초기화 구문이 있어야 합니다.
+
+어떤 경우에는 아래의 [자동 초기화 구문 상속 (Automatic Initializer Inheritance)]() 에 설명된 대로 상위 클래스에서 하나 이상의 지정 초기화 구문을 상속하여 이 요구사항을 충족합니다.
+
+#
+
+편의 초기화는 클래스에 대한 초기화 구문을 지원하는 보조 초기화 구문입니다.
+
+지정 초기화의 파라미터 중 일부를 기본값으로 설정하여 편의 초기화와 동일한 클래스에서 지정 초기화를 호출하도록 편의 초기화를 정의할 수 있습니다.
+
+특정 사용 케이스 또는 입력 값 타입에 대한 해당 클래스의 인스턴스를 생성하기 위해 편의 초기화를 정의할 수도 있습니다.
+
+#
+
+클래스에서 필요하지 않은 경우 편의 초기화를 제공할 필요가 없습니다.
+
+일반적인 초기화 패턴에 대한 바로가기가 시간을 절약하거나 클래스 초기화 의도를 더 명확하게 만들 때마다 편의 초기화를 만듭니다.
+
+<br>
+
+### 지정 및 편의 초기화 구문 (Syntax for Designated and Convenience Initializers)
+
 
 
 
