--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -553,7 +553,27 @@ Swift 는 모든 저장 프로퍼티가 초기값을 받을 수 있도록 돕기
 
 ### 지정 및 편의 초기화 구문 (Syntax for Designated and Convenience Initializers)
 
+클래스에 대한 지정 초기화 구문은 값 타입에 대한 간단한 초기화 구문과 동일한 방식으로 작성됩니다.
 
+~~~ swift
+init(<#parameters#>) {
+   <#statements#>
+}
+~~~
+
+#
+
+편의 초기화 구문은 동일한 스타일로 작성되지만 `init` 키워드 앞에 `convenience` 수정자가 작성되고 공백으로 구분됩니다.
+
+~~~ swift
+convenience init(<#parameters#>) {
+   <#statements#>
+}
+~~~
+
+<br>
+
+### 클래스 타입에 대한 초기화 위임 (Initializer Delegation for Class Types)
 
 
 
